--- a/src/Client/Localization/ProtonVPN.Client.Localization/Strings/sv-SE/Resources.resw
+++ b/src/Client/Localization/ProtonVPN.Client.Localization/Strings/sv-SE/Resources.resw
@@ -294,8 +294,13 @@
   <data name="Common_States_Updating">
     <value>Uppdaterar...</value>
   </data>
+  <data name="Common_Tags_Beta">
+    <value>BETA</value>
+    <comment>This tag indicates that this version of the app is currently in beta (early access)</comment>
+  </data>
   <data name="Common_Tags_New">
     <value>NYTT</value>
+    <comment>This tag indicates that a newer version of the app is currently available</comment>
   </data>
   <data name="Components_Update_GetMostFromYourVpn">
     <value>Få ut det mesta av din VPN genom att uppdatera till den senaste versionen av appen.</value>
@@ -1773,6 +1778,39 @@ Hög latens kan sakta ner din anslutning.</value>
   <data name="Dialogs_Latency_Title">
     <value>Vad är latens?</value>
   </data>
+  <data name="Dialogs_NpsSurvey_CommentLabel">
+    <value>Berätta gärna varför du gav det betyget</value>
+  </data>
+  <data name="Dialogs_NpsSurvey_ErrorSubtitle">
+    <value>Vi kunde inte skicka din feedback. Kontrollera din anslutning och försök igen.</value>
+  </data>
+  <data name="Dialogs_NpsSurvey_ErrorTitle">
+    <value>Något gick fel</value>
+  </data>
+  <data name="Dialogs_NpsSurvey_HighRateDescription">
+    <value>10 är mycket troligt</value>
+  </data>
+  <data name="Dialogs_NpsSurvey_LowRateDescription">
+    <value>0 är minst troligt</value>
+  </data>
+  <data name="Dialogs_NpsSurvey_Optional">
+    <value>Valfritt</value>
+  </data>
+  <data name="Dialogs_NpsSurvey_ShareAnonymously">
+    <value>Dela anonymt</value>
+  </data>
+  <data name="Dialogs_NpsSurvey_SuccessSubtitle">
+    <value>Din feedback hjälper oss att förbättra Proton VPN.</value>
+  </data>
+  <data name="Dialogs_NpsSurvey_SuccessTitle">
+    <value>Tack för din feedback</value>
+  </data>
+  <data name="Dialogs_NpsSurvey_Title">
+    <value>Hur troligt är det att du kommer att rekommendera Proton VPN till en vän?</value>
+  </data>
+  <data name="Dialogs_NpsSurvey_TryAgain">
+    <value>Försök igen</value>
+  </data>
   <data name="Dialogs_P2PDetection_Description">
     <value>Din anslutning har inaktiverats eftersom du använder en server som inte stöder peer-to-peer-trafik (P2P). P2P stöds inte på gratisservrar. Använd en annan server för P2P.</value>
   </data>
@@ -2039,11 +2077,23 @@ En hög serverbelastning kan sakta ner din anslutning.</value>
   <data name="Dialogs_WhatsNew_Gateways_Title">
     <value>Gateways har flyttats</value>
   </data>
+  <data name="Dialogs_WhatsNew_LanConnections_Description">
+    <value>You can now connect to printers, speakers, and other devices on your local network (LAN), bypassing the VPN tunnel.</value>
+  </data>
+  <data name="Dialogs_WhatsNew_LanConnections_Title">
+    <value>LAN-anslutningar</value>
+  </data>
   <data name="Dialogs_WhatsNew_NewLook_Description">
     <value>Vi uppdaterade vår design och flyttade runt några saker för att göra appen enklare att använda.</value>
   </data>
   <data name="Dialogs_WhatsNew_NewLook_Title">
     <value>Nytt utseende, samma skydd</value>
+  </data>
+  <data name="Dialogs_WhatsNew_PortNumber_Description">
+    <value>When port forwarding is enabled, you'll now see your active port number on the home screen.</value>
+  </data>
+  <data name="Dialogs_WhatsNew_PortNumber_Title">
+    <value>Aktivt portnummer</value>
   </data>
   <data name="Dialogs_WhatsNew_Profiles_Description">
     <value>Lägg till avancerade profilinställningar som NetShield och vidarebefordran av port eller ställ in "Anslut och kör" för att starta en valfri webbplats när du ansluter.</value>
@@ -2062,6 +2112,12 @@ En hög serverbelastning kan sakta ner din anslutning.</value>
   </data>
   <data name="Dialogs_WhatsNew_Title">
     <value>Vad som är nytt</value>
+  </data>
+  <data name="Dialogs_WhatsNew_TrayApp_Description">
+    <value>You can now connect, disconnect, and change your default connection from the system tray.</value>
+  </data>
+  <data name="Dialogs_WhatsNew_TrayApp_Title">
+    <value>New system tray app</value>
   </data>
   <data name="Exit_Confirmation_Title">
     <value>Avsluta Proton VPN?</value>
@@ -2134,6 +2190,9 @@ En hög serverbelastning kan sakta ner din anslutning.</value>
   </data>
   <data name="Flyouts_KillSwitch_Info">
     <value>Din IP-adress kan exponeras om din VPN-anslutning tappas</value>
+  </data>
+  <data name="Flyouts_KillSwitch_Info_Disconnected">
+    <value>Advanced kill switch disables your internet to protect your IP address while you're not connected to Proton VPN.</value>
   </data>
   <data name="Flyouts_KillSwitch_Standard_Success">
     <value>Om din VPN-anslutning tappas kommer du att kopplas från från internet tills VPN återställs</value>
@@ -2217,20 +2276,20 @@ En hög serverbelastning kan sakta ner din anslutning.</value>
     <value>Boostas av VPN Accelerator</value>
   </data>
   <data name="Flyouts_Speed_Description1">
-    <value>Detta visar hur mycket data som överförs genom Proton VPN varje sekund.</value>
+    <value>Shows how much data goes through the VPN tunnel in real time.</value>
   </data>
   <data name="Flyouts_Speed_Description2">
-    <value>Hastigheten baseras på din enhets nuvarande aktivitet — det representerar inte VPN:s maximala hastighet.</value>
+    <value>This is based on your device's current activity. In most cases, it doesn't represent the VPN's maximum speed.</value>
   </data>
   <data name="Flyouts_Speed_Download">
     <value>Nedladdning</value>
     <comment>Refers to the download speed (e.g., Download [new line] 10 MB/s).</comment>
   </data>
   <data name="Flyouts_Speed_KnowledgeBaseLinkTitle">
-    <value>Förstå och öka VPN-anslutningshastigheter</value>
+    <value>VPN speed and traffic explained</value>
   </data>
   <data name="Flyouts_Speed_Title">
-    <value>Hastighet</value>
+    <value>Nuvarande trafik</value>
   </data>
   <data name="Flyouts_Speed_Upload">
     <value>Uppladdning</value>
@@ -2276,14 +2335,14 @@ En hög serverbelastning kan sakta ner din anslutning.</value>
     <value>Få det bästa av två världar</value>
   </data>
   <data name="Flyouts_Volume_Description">
-    <value>Detta visar hur mycket trafik som har dirigerats genom din VPN.</value>
+    <value>Shows the total amount of data passed through the VPN tunnel since you connected.</value>
   </data>
   <data name="Flyouts_Volume_Download">
     <value>Nedladdat</value>
     <comment>Refers to the downloaded volume (e.g., Download [new line] 250 MB).</comment>
   </data>
   <data name="Flyouts_Volume_Title">
-    <value>Volym</value>
+    <value>Total trafik</value>
   </data>
   <data name="Flyouts_Volume_Upload">
     <value>Uppladdat</value>
@@ -2322,7 +2381,7 @@ En hög serverbelastning kan sakta ner din anslutning.</value>
     <comment>Format a size in Terabytes. {0} is a place holder for the number of Terabytes (eg. 30 TB)</comment>
   </data>
   <data name="Format_SpeedUnit">
-    <value>Hastighet ({0})</value>
+    <value>Nuvarande trafik ({0})</value>
     <comment>This string is used to format speed measurements in various units. The placeholder {0} will be replaced by the appropriate unit of measurement, such as B/s (Bytes per second), kB/s (Kilobytes per second), MB/s (Megabytes per second), and so on.</comment>
   </data>
   <data name="Format_Speed_BytesPerSecond">
@@ -2377,6 +2436,12 @@ En hög serverbelastning kan sakta ner din anslutning.</value>
     <value>hh\:mm\:ss</value>
     <comment>Format a time as a number of hours, minutes and seconds in a short format. 'hh' is a placeholder for the number of hours, 'mm' is a placeholder for the number of minutes and 'ss' for the number of seconds. The separator (if any) needs to be escaped using '' character (eg. hh\:mm\:ss gives 01:05:36).</comment>
   </data>
+  <data name="Format_Time_Hours_Ago_One">
+    <value>{0} timme sedan</value>
+  </data>
+  <data name="Format_Time_Hours_Ago_Other">
+    <value>{0} timmar sedan</value>
+  </data>
   <data name="Format_Time_Minutes">
     <value>{0} min.</value>
     <comment>Format a time as a number of minutes. {0} is a placeholder for the number of minutes (eg. 1 min or 20 min). Use abbreviations, no pluralization.</comment>
@@ -2389,9 +2454,21 @@ En hög serverbelastning kan sakta ner din anslutning.</value>
     <value>mm\:ss</value>
     <comment>Format a time as a number of minutes and seconds in a short format. 'mm' is a placeholder for the number of minutes and 'ss' for the number of seconds. The separator (if any) needs to be escaped using '' character (eg. mm\:ss gives 05:36).</comment>
   </data>
+  <data name="Format_Time_Minutes_Ago_One">
+    <value>{0} minut sedan</value>
+  </data>
+  <data name="Format_Time_Minutes_Ago_Other">
+    <value>{0} minuter sedan</value>
+  </data>
   <data name="Format_Time_Seconds">
     <value>{0} sek.</value>
     <comment>Format a time as a number of seconds. {0} is a placeholder for the number of second (eg. 1 sec or 20 sec). Use abbreviations for seconds, no pluralization.</comment>
+  </data>
+  <data name="Format_Time_Seconds_Ago_One">
+    <value>{0} sekund sedan</value>
+  </data>
+  <data name="Format_Time_Seconds_Ago_Other">
+    <value>{0} sekunder sedan</value>
   </data>
   <data name="FreeConnections_P2PUpsell">
     <value>Ladda ner filer via BitTorrent och andra fildelningsprotokoll</value>
@@ -2458,8 +2535,14 @@ En hög serverbelastning kan sakta ner din anslutning.</value>
     <value>Anslutningskort</value>
     <comment>Landmarks are not displayed on screen but read by a screen reader to identify a group of components for accessibility purposes.</comment>
   </data>
+  <data name="Home_ConnectionDetails_AdvancedKillSwitchActivated">
+    <value>Advanced kill switch activated</value>
+  </data>
   <data name="Home_ConnectionDetails_City">
     <value>Ort</value>
+  </data>
+  <data name="Home_ConnectionDetails_ConnectToRestoreConnection">
+    <value>Anslut till VPN för att återställa din internetanslutning.</value>
   </data>
   <data name="Home_ConnectionDetails_ConnectedFor">
     <value>Ansluten i</value>
@@ -2532,7 +2615,7 @@ En hög serverbelastning kan sakta ner din anslutning.</value>
     <value>Kryptera din aktivitet online genom att ansluta till VPN.</value>
   </data>
   <data name="Home_ConnectionDetails_Volume">
-    <value>Volym</value>
+    <value>Total trafik</value>
   </data>
   <data name="Home_ConnectionDetails_Volume_Download">
     <value>Nedladdningsvolym</value>
@@ -2743,6 +2826,10 @@ En hög serverbelastning kan sakta ner din anslutning.</value>
   </data>
   <data name="Notifications_UnsecureWifi_Title">
     <value>Osäkrad Wi-Fi-anslutning upptäckt</value>
+  </data>
+  <data name="NpsSurvey_Title">
+    <value>Proton VPN - Undersökning</value>
+    <comment>The window title displayed at the top of the NPS (Net Promoter Score) survey</comment>
   </data>
   <data name="Overlay_OutdatedClient_Action">
     <value>Uppdatera nu</value>
@@ -3096,10 +3183,10 @@ En hög serverbelastning kan sakta ner din anslutning.</value>
     <value>Förhindrar IPv6-läckage genom att blockera anslutningar till IPv6-adresser.</value>
   </data>
   <data name="Settings_Connection_Advanced_LanConnections">
-    <value>LAN-anslutningar</value>
+    <value>Tillåt LAN-anslutningar</value>
   </data>
   <data name="Settings_Connection_Advanced_LanConnections_Description">
-    <value>Låter dig ansluta till skrivare, högtalare och andra enheter i din enhets lokala nätverk.</value>
+    <value>Tillåter anslutningar till skrivare, högtalare och andra enheter i ditt lokala nätverk.</value>
   </data>
   <data name="Settings_Connection_Advanced_NatType">
     <value>NAT-typ</value>
@@ -3236,6 +3323,10 @@ En hög serverbelastning kan sakta ner din anslutning.</value>
   <data name="Settings_Connection_PortForwarding_Footer">
     <value>För att använda vidarebefordran av port, anslut till en server som stöder P2P.</value>
   </data>
+  <data name="Settings_Connection_PortForwarding_LastChanged">
+    <value>Senast ändrad: {0}</value>
+    <comment>Indicates when the active port was changed for the last time. {0} is a placeholder for the time. (eg. "Last changed: 5 minutes ago" or "Last changed: May 20, at 14:32")</comment>
+  </data>
   <data name="Settings_Connection_PortForwarding_Loading">
     <value>Laddar in …</value>
   </data>
@@ -3288,10 +3379,14 @@ En hög serverbelastning kan sakta ner din anslutning.</value>
     <value>Anpassa din anslutning genom att bestämma vilka appar och IP-adresser som är skyddade av VPN.</value>
   </data>
   <data name="Settings_Connection_SplitTunneling_Inverse">
-    <value>Omvänd</value>
+    <value>Inkluderingsläge</value>
   </data>
   <data name="Settings_Connection_SplitTunneling_Inverse_Description">
     <value>Endast valda appar och IP-adresser ansluter via VPN, all annan trafik är oskyddad</value>
+  </data>
+  <data name="Settings_Connection_SplitTunneling_Inverse_Short">
+    <value>Inkludera</value>
+    <comment>Shorter version (if possible) of "Include mode". To be used when available space is limited.</comment>
   </data>
   <data name="Settings_Connection_SplitTunneling_IpAddresses_Add">
     <value>Lägg till IP</value>
@@ -3307,10 +3402,14 @@ En hög serverbelastning kan sakta ner din anslutning.</value>
     <value>Lägg till IPv4-adress</value>
   </data>
   <data name="Settings_Connection_SplitTunneling_Standard">
-    <value>Standard</value>
+    <value>Exkluderingsläge</value>
   </data>
   <data name="Settings_Connection_SplitTunneling_Standard_Description">
     <value>Valda appar och IP-adresser är exkluderade från VPN-anslutning</value>
+  </data>
+  <data name="Settings_Connection_SplitTunneling_Standard_Short">
+    <value>Exkludera</value>
+    <comment>Shorter version (if possible) of "Exclude mode". To be used when available space is limited.</comment>
   </data>
   <data name="Settings_Connection_VpnAccelerator">
     <value>VPN Accelerator</value>
@@ -3640,6 +3739,9 @@ En hög serverbelastning kan sakta ner din anslutning.</value>
     <value>Öppna {0}</value>
     <comment>Button displayed in the tray icon to open the Proton VPN application. {0} is a placeholder for the name of the application (eg. "Open Proton VPN")</comment>
   </data>
+  <data name="Tray_Actions_OpenApplicationToSignIn">
+    <value>Öppna app för att logga in</value>
+  </data>
   <data name="Unit_BytesPerSecond">
     <value>B/s</value>
     <comment>Unit for Bytes per second</comment>
@@ -3769,13 +3871,16 @@ En hög serverbelastning kan sakta ner din anslutning.</value>
     <value>Dirigera genom ultrasäkra servrar i Schweiz, Sverige och Island</value>
   </data>
   <data name="Upsell_Carousel_Speed">
-    <value>Surfa med ännu högre hastigheter (upp till 10 Gbps)</value>
+    <value>Surfa med ännu högre hastigheter</value>
   </data>
   <data name="Upsell_Carousel_Speed_Acceleration">
-    <value>Öka dina anslutningshastigheter med upp till 400 % med VPN Accelerator</value>
+    <value>Surfa upp till 400 % snabbare med VPN Accelerator</value>
   </data>
   <data name="Upsell_Carousel_Speed_Access">
     <value>Åtkomst till snabbare, mindre belastade servrar</value>
+  </data>
+  <data name="Upsell_Carousel_Speed_Traffic">
+    <value>Få anslutningshastigheter på upp till 10 Gbps</value>
   </data>
   <data name="Upsell_Carousel_SplitTunneling">
     <value>Få det bästa av två världar</value>
@@ -3832,11 +3937,8 @@ En hög serverbelastning kan sakta ner din anslutning.</value>
     <value>Åtkomst till över {0} i {1}</value>
     <comment>Title for the worldwide coverage upsell feature page. {0} is a placeholder for the number of servers (eg. 100 secure servers) and {1} for the number of countries available (eg. 60 countries).</comment>
   </data>
-  <data name="Upsell_Carousel_WorldwideCoverage_Audit">
-    <value>Granskad av oberoende säkerhetsexperter</value>
-  </data>
   <data name="Upsell_Carousel_WorldwideCoverage_Censorship">
-    <value>Kringgå censur med avancerade säkerhets- och integritetsfunktioner</value>
+    <value>Kringgå censur med avancerade säkerhetsfunktioner</value>
   </data>
   <data name="Upsell_Carousel_WorldwideCoverage_Countries_One">
     <value>{0} land</value>
@@ -3844,8 +3946,11 @@ En hög serverbelastning kan sakta ner din anslutning.</value>
   <data name="Upsell_Carousel_WorldwideCoverage_Countries_Other">
     <value>{0} länder</value>
   </data>
-  <data name="Upsell_Carousel_WorldwideCoverage_OpenSource">
-    <value>VPN med öppen källkod</value>
+  <data name="Upsell_Carousel_WorldwideCoverage_Features">
+    <value>Säker streaming, torrenting och mer</value>
+  </data>
+  <data name="Upsell_Carousel_WorldwideCoverage_Selection">
+    <value>Välj vilket land som helst från vårt världsomspännande nätverk</value>
   </data>
   <data name="Upsell_Carousel_WorldwideCoverage_Servers_One">
     <value>{0} säker server</value>
