--- a/src/Client/Localization/ProtonVPN.Client.Localization/Strings/cs-CZ/Resources.resw
+++ b/src/Client/Localization/ProtonVPN.Client.Localization/Strings/cs-CZ/Resources.resw
@@ -294,8 +294,13 @@
   <data name="Common_States_Updating">
     <value>Aktualizuji...</value>
   </data>
+  <data name="Common_Tags_Beta">
+    <value>BETA</value>
+    <comment>This tag indicates that this version of the app is currently in beta (early access)</comment>
+  </data>
   <data name="Common_Tags_New">
     <value>NOVÉ</value>
+    <comment>This tag indicates that a newer version of the app is currently available</comment>
   </data>
   <data name="Components_Update_GetMostFromYourVpn">
     <value>Aktualizací na nejnovější verzi aplikace získáte z VPN maximum.</value>
@@ -1917,6 +1922,39 @@
   <data name="Dialogs_Latency_Title">
     <value>Co je to latence?</value>
   </data>
+  <data name="Dialogs_NpsSurvey_CommentLabel">
+    <value>Dejte nám prosím vědět, proč jste uvedli toto hodnocení</value>
+  </data>
+  <data name="Dialogs_NpsSurvey_ErrorSubtitle">
+    <value>Nemohli jsme odeslat vaši zpětnou vazbu. Zkontrolujte své připojení a zkuste to znovu.</value>
+  </data>
+  <data name="Dialogs_NpsSurvey_ErrorTitle">
+    <value>Něco se pokazilo</value>
+  </data>
+  <data name="Dialogs_NpsSurvey_HighRateDescription">
+    <value>10 je velmi pravděpodobně</value>
+  </data>
+  <data name="Dialogs_NpsSurvey_LowRateDescription">
+    <value>0 je velmi nepravděpodobně</value>
+  </data>
+  <data name="Dialogs_NpsSurvey_Optional">
+    <value>Volitelné</value>
+  </data>
+  <data name="Dialogs_NpsSurvey_ShareAnonymously">
+    <value>Sdílet anonymě</value>
+  </data>
+  <data name="Dialogs_NpsSurvey_SuccessSubtitle">
+    <value>Vaše zpětná vazba nám pomáhá zlepšovat Proton VPN.</value>
+  </data>
+  <data name="Dialogs_NpsSurvey_SuccessTitle">
+    <value>Děkujeme za zpětnou vazbu</value>
+  </data>
+  <data name="Dialogs_NpsSurvey_Title">
+    <value>Jaká je pravděpodobnost, že doporučíte Proton VPN svému příteli?</value>
+  </data>
+  <data name="Dialogs_NpsSurvey_TryAgain">
+    <value>Zkuste to znovu</value>
+  </data>
   <data name="Dialogs_P2PDetection_Description">
     <value>Vaše připojení bylo deaktivováno, protože používáte server, který nepodporuje provoz peer-to-peer (P2P). P2P není podporováno na bezplatných serverech. Pro P2P použijte jiný server.</value>
   </data>
@@ -2189,11 +2227,23 @@ Vysoké vytížení serveru může zpomalit vaše připojení.</value>
   <data name="Dialogs_WhatsNew_Gateways_Title">
     <value>Brány byly přesunuty</value>
   </data>
+  <data name="Dialogs_WhatsNew_LanConnections_Description">
+    <value>Nyní se můžete připojit k tiskárnám, reproduktorům a dalším zařízením v místní síti (LAN) a obejít přitom tunel VPN.</value>
+  </data>
+  <data name="Dialogs_WhatsNew_LanConnections_Title">
+    <value>LAN připojení</value>
+  </data>
   <data name="Dialogs_WhatsNew_NewLook_Description">
     <value>Vylepšili jsme vzhled a uspořádali některé prvky tak, aby se aplikace snáze používala.</value>
   </data>
   <data name="Dialogs_WhatsNew_NewLook_Title">
     <value>Nový vzhled, stejná ochrana</value>
+  </data>
+  <data name="Dialogs_WhatsNew_PortNumber_Description">
+    <value>Když je přesměrování portů povoleno, na domovské obrazovce se nyní zobrazí číslo aktivního portu.</value>
+  </data>
+  <data name="Dialogs_WhatsNew_PortNumber_Title">
+    <value>Číslo aktivního portu</value>
   </data>
   <data name="Dialogs_WhatsNew_Profiles_Description">
     <value>Přidejte pokročilá nastavení profilu, jako je NetShield a přesměrování portů, nebo nastavte funkci Connect and Go, která při připojení spustí vybranou webovou stránku.</value>
@@ -2212,6 +2262,12 @@ Vysoké vytížení serveru může zpomalit vaše připojení.</value>
   </data>
   <data name="Dialogs_WhatsNew_Title">
     <value>Co je nového</value>
+  </data>
+  <data name="Dialogs_WhatsNew_TrayApp_Description">
+    <value>Nyní se můžete připojit, odpojit a změnit výchozí připojení ze systémové lišty.</value>
+  </data>
+  <data name="Dialogs_WhatsNew_TrayApp_Title">
+    <value>Nová aplikace na systémové liště</value>
   </data>
   <data name="Exit_Confirmation_Title">
     <value>Ukončit Proton VPN?</value>
@@ -2284,6 +2340,9 @@ Vysoké vytížení serveru může zpomalit vaše připojení.</value>
   </data>
   <data name="Flyouts_KillSwitch_Info">
     <value>Vaše IP adresa může být odhalena, pokud dojde k výpadku připojení k VPN</value>
+  </data>
+  <data name="Flyouts_KillSwitch_Info_Disconnected">
+    <value>Pokročilý Kill Switch deaktivuje internet a ochrání vaši IP adresu v době, kdy nejste připojeni k Proton VPN.</value>
   </data>
   <data name="Flyouts_KillSwitch_Standard_Success">
     <value>Pokud dojde k výpadku připojení VPN, budete odpojeni od internetu, dokud nebude VPN obnovena</value>
@@ -2367,20 +2426,20 @@ Vysoké vytížení serveru může zpomalit vaše připojení.</value>
     <value>Posíleno VPN Acceleratorem</value>
   </data>
   <data name="Flyouts_Speed_Description1">
-    <value>Zobrazuje, kolik dat se každou sekundu přenese skrze Proton VPN.</value>
+    <value>Zobrazuje v reálném čase, kolik dat prochází skrze VPN tunel.</value>
   </data>
   <data name="Flyouts_Speed_Description2">
-    <value>Rychlost je založena na aktuální aktivitě vašeho zařízení — nepředstavuje maximální rychlost VPN.</value>
+    <value>To je založeno na aktuální aktivitě vašeho zařízení. Ve většině případů nepředstavuje maximální rychlost VPN.</value>
   </data>
   <data name="Flyouts_Speed_Download">
     <value>Stahování</value>
     <comment>Refers to the download speed (e.g., Download [new line] 10 MB/s).</comment>
   </data>
   <data name="Flyouts_Speed_KnowledgeBaseLinkTitle">
-    <value>Rychlost připojení VPN a její zvýšení</value>
+    <value>Vysvětlení rychlosti a provozu VPN</value>
   </data>
   <data name="Flyouts_Speed_Title">
-    <value>Rychlost</value>
+    <value>Aktuální provoz</value>
   </data>
   <data name="Flyouts_Speed_Upload">
     <value>Nahrávání</value>
@@ -2450,14 +2509,14 @@ Vysoké vytížení serveru může zpomalit vaše připojení.</value>
     <value>Získejte to nejlepší z obou světů</value>
   </data>
   <data name="Flyouts_Volume_Description">
-    <value>Zobrazuje, kolik dat prošlo skrze vaši VPN.</value>
+    <value>Zobrazuje celkový objem dat prošlých tunelem VPN od okamžiku připojení.</value>
   </data>
   <data name="Flyouts_Volume_Download">
     <value>Stahování</value>
     <comment>Refers to the downloaded volume (e.g., Download [new line] 250 MB).</comment>
   </data>
   <data name="Flyouts_Volume_Title">
-    <value>Objem dat</value>
+    <value>Celkový provoz</value>
   </data>
   <data name="Flyouts_Volume_Upload">
     <value>Nahrávání</value>
@@ -2496,7 +2555,7 @@ Vysoké vytížení serveru může zpomalit vaše připojení.</value>
     <comment>Format a size in Terabytes. {0} is a place holder for the number of Terabytes (eg. 30 TB)</comment>
   </data>
   <data name="Format_SpeedUnit">
-    <value>Rychlost ({0})</value>
+    <value>Aktuální provoz ({0})</value>
     <comment>This string is used to format speed measurements in various units. The placeholder {0} will be replaced by the appropriate unit of measurement, such as B/s (Bytes per second), kB/s (Kilobytes per second), MB/s (Megabytes per second), and so on.</comment>
   </data>
   <data name="Format_Speed_BytesPerSecond">
@@ -2563,6 +2622,18 @@ Vysoké vytížení serveru může zpomalit vaše připojení.</value>
     <value>hh\:mm\:ss</value>
     <comment>Format a time as a number of hours, minutes and seconds in a short format. 'hh' is a placeholder for the number of hours, 'mm' is a placeholder for the number of minutes and 'ss' for the number of seconds. The separator (if any) needs to be escaped using '' character (eg. hh\:mm\:ss gives 01:05:36).</comment>
   </data>
+  <data name="Format_Time_Hours_Ago_One">
+    <value>před {0} hodinou</value>
+  </data>
+  <data name="Format_Time_Hours_Ago_Few">
+    <value>před {0} hodinami</value>
+  </data>
+  <data name="Format_Time_Hours_Ago_Many">
+    <value>před {0} hodinami</value>
+  </data>
+  <data name="Format_Time_Hours_Ago_Other">
+    <value>před {0} hodinami</value>
+  </data>
   <data name="Format_Time_Minutes">
     <value>{0} min.</value>
     <comment>Format a time as a number of minutes. {0} is a placeholder for the number of minutes (eg. 1 min or 20 min). Use abbreviations, no pluralization.</comment>
@@ -2575,9 +2646,33 @@ Vysoké vytížení serveru může zpomalit vaše připojení.</value>
     <value>mm\:ss</value>
     <comment>Format a time as a number of minutes and seconds in a short format. 'mm' is a placeholder for the number of minutes and 'ss' for the number of seconds. The separator (if any) needs to be escaped using '' character (eg. mm\:ss gives 05:36).</comment>
   </data>
+  <data name="Format_Time_Minutes_Ago_One">
+    <value>před {0} minutou</value>
+  </data>
+  <data name="Format_Time_Minutes_Ago_Few">
+    <value>před {0} minutami</value>
+  </data>
+  <data name="Format_Time_Minutes_Ago_Many">
+    <value>před {0} minutami</value>
+  </data>
+  <data name="Format_Time_Minutes_Ago_Other">
+    <value>před {0} minutami</value>
+  </data>
   <data name="Format_Time_Seconds">
     <value>{0} sek.</value>
     <comment>Format a time as a number of seconds. {0} is a placeholder for the number of second (eg. 1 sec or 20 sec). Use abbreviations for seconds, no pluralization.</comment>
+  </data>
+  <data name="Format_Time_Seconds_Ago_One">
+    <value>před {0} sekundou</value>
+  </data>
+  <data name="Format_Time_Seconds_Ago_Few">
+    <value>před {0} sekundami</value>
+  </data>
+  <data name="Format_Time_Seconds_Ago_Many">
+    <value>před {0} sekundami</value>
+  </data>
+  <data name="Format_Time_Seconds_Ago_Other">
+    <value>před {0} sekundami</value>
   </data>
   <data name="FreeConnections_P2PUpsell">
     <value>Stahujte soubory přes BitTorrent a jiné protokoly ke sdílení souborů</value>
@@ -2644,8 +2739,14 @@ Vysoké vytížení serveru může zpomalit vaše připojení.</value>
     <value>Karta připojení</value>
     <comment>Landmarks are not displayed on screen but read by a screen reader to identify a group of components for accessibility purposes.</comment>
   </data>
+  <data name="Home_ConnectionDetails_AdvancedKillSwitchActivated">
+    <value>Pokročilý Kill Switch aktivován</value>
+  </data>
   <data name="Home_ConnectionDetails_City">
     <value>Město</value>
+  </data>
+  <data name="Home_ConnectionDetails_ConnectToRestoreConnection">
+    <value>Připojte se k VPN pro obnovení připojení k internetu.</value>
   </data>
   <data name="Home_ConnectionDetails_ConnectedFor">
     <value>Připojeno</value>
@@ -2718,7 +2819,7 @@ Vysoké vytížení serveru může zpomalit vaše připojení.</value>
     <value>Šifrujte své online aktivity připojením k VPN.</value>
   </data>
   <data name="Home_ConnectionDetails_Volume">
-    <value>Objem dat</value>
+    <value>Celkový provoz</value>
   </data>
   <data name="Home_ConnectionDetails_Volume_Download">
     <value>Stažená data</value>
@@ -2941,6 +3042,10 @@ Vysoké vytížení serveru může zpomalit vaše připojení.</value>
   </data>
   <data name="Notifications_UnsecureWifi_Title">
     <value>Zjištěno nezabezpečené připojení Wi-Fi</value>
+  </data>
+  <data name="NpsSurvey_Title">
+    <value>Proton VPN - Průzkum</value>
+    <comment>The window title displayed at the top of the NPS (Net Promoter Score) survey</comment>
   </data>
   <data name="Overlay_OutdatedClient_Action">
     <value>Aktualizovat nyní</value>
@@ -3294,7 +3399,7 @@ Vysoké vytížení serveru může zpomalit vaše připojení.</value>
     <value>Zabraňuje únikům IPv6 blokováním připojení k adresám IPv6.</value>
   </data>
   <data name="Settings_Connection_Advanced_LanConnections">
-    <value>LAN připojení</value>
+    <value>Povolit připojení LAN</value>
   </data>
   <data name="Settings_Connection_Advanced_LanConnections_Description">
     <value>Umožňuje připojit tiskárny, reproduktory a ostatní zařízení ve vaší LAN.</value>
@@ -3434,6 +3539,10 @@ Vysoké vytížení serveru může zpomalit vaše připojení.</value>
   <data name="Settings_Connection_PortForwarding_Footer">
     <value>Chcete-li použít přesměrování portů, připojte se k serveru, který podporuje P2P.</value>
   </data>
+  <data name="Settings_Connection_PortForwarding_LastChanged">
+    <value>Naposledy změněno: {0}</value>
+    <comment>Indicates when the active port was changed for the last time. {0} is a placeholder for the time. (eg. "Last changed: 5 minutes ago" or "Last changed: May 20, at 14:32")</comment>
+  </data>
   <data name="Settings_Connection_PortForwarding_Loading">
     <value>Načítání...</value>
   </data>
@@ -3486,10 +3595,14 @@ Vysoké vytížení serveru může zpomalit vaše připojení.</value>
     <value>Přizpůsobte si připojení tím, že se rozhodnete, které aplikace a IP adresy budou chráněny pomocí VPN.</value>
   </data>
   <data name="Settings_Connection_SplitTunneling_Inverse">
-    <value>Obrátit</value>
+    <value>Režim zahrnutí</value>
   </data>
   <data name="Settings_Connection_SplitTunneling_Inverse_Description">
     <value>Skrze VPN se připojují pouze vybrané aplikace a IP adresy, veškerý další provoz je nechráněný</value>
+  </data>
+  <data name="Settings_Connection_SplitTunneling_Inverse_Short">
+    <value>Zahrnout</value>
+    <comment>Shorter version (if possible) of "Include mode". To be used when available space is limited.</comment>
   </data>
   <data name="Settings_Connection_SplitTunneling_IpAddresses_Add">
     <value>Přidat IP</value>
@@ -3505,10 +3618,14 @@ Vysoké vytížení serveru může zpomalit vaše připojení.</value>
     <value>Přidat adresu IPv4</value>
   </data>
   <data name="Settings_Connection_SplitTunneling_Standard">
-    <value>Standardní</value>
+    <value>Režim vyloučení</value>
   </data>
   <data name="Settings_Connection_SplitTunneling_Standard_Description">
     <value>Vybrané aplikace a IP adresy jsou vyloučeny z připojení VPN</value>
+  </data>
+  <data name="Settings_Connection_SplitTunneling_Standard_Short">
+    <value>Vyloučit</value>
+    <comment>Shorter version (if possible) of "Exclude mode". To be used when available space is limited.</comment>
   </data>
   <data name="Settings_Connection_VpnAccelerator">
     <value>VPN Accelerator</value>
@@ -3838,6 +3955,9 @@ Vysoké vytížení serveru může zpomalit vaše připojení.</value>
     <value>Otevřít {0}</value>
     <comment>Button displayed in the tray icon to open the Proton VPN application. {0} is a placeholder for the name of the application (eg. "Open Proton VPN")</comment>
   </data>
+  <data name="Tray_Actions_OpenApplicationToSignIn">
+    <value>Pro přihlášení otevřete aplikaci</value>
+  </data>
   <data name="Unit_BytesPerSecond">
     <value>B/s</value>
     <comment>Unit for Bytes per second</comment>
@@ -3967,13 +4087,16 @@ Vysoké vytížení serveru může zpomalit vaše připojení.</value>
     <value>Směrování přes mimořádně zabezpečené servery ve Švýcarsku, Švédsku a Islandu</value>
   </data>
   <data name="Upsell_Carousel_Speed">
-    <value>Procházejte ještě vyšší rychlostí (až 10 Gb/s)</value>
+    <value>Procházejte internet ještě vyšší rychlostí</value>
   </data>
   <data name="Upsell_Carousel_Speed_Acceleration">
-    <value>Zvyšte rychlost vašeho připojení až o 400 % pomocí funkce VPN Accelerator</value>
+    <value>Procházejte internet až o 400 % rychleji s nástrojem VPN Accelerator</value>
   </data>
   <data name="Upsell_Carousel_Speed_Access">
     <value>Přístup k rychlejším a méně vytíženým serverům</value>
+  </data>
+  <data name="Upsell_Carousel_Speed_Traffic">
+    <value>Získejte rychlost připojení až 10 Gb/s</value>
   </data>
   <data name="Upsell_Carousel_SplitTunneling">
     <value>Získejte to nejlepší z obou světů</value>
@@ -4030,11 +4153,8 @@ Vysoké vytížení serveru může zpomalit vaše připojení.</value>
     <value>Přístup k {0} v {1}</value>
     <comment>Title for the worldwide coverage upsell feature page. {0} is a placeholder for the number of servers (eg. 100 secure servers) and {1} for the number of countries available (eg. 60 countries).</comment>
   </data>
-  <data name="Upsell_Carousel_WorldwideCoverage_Audit">
-    <value>Auditováno nezávislými bezpečnostními experty</value>
-  </data>
   <data name="Upsell_Carousel_WorldwideCoverage_Censorship">
-    <value>Obejděte cenzuru pomocí pokročilých funkcí bezpečnosti a ochrany soukromí</value>
+    <value>Obejděte cenzuru pomocí pokročilých funkcí bezpečnosti</value>
   </data>
   <data name="Upsell_Carousel_WorldwideCoverage_Countries_One">
     <value>{0} zemi</value>
@@ -4048,8 +4168,11 @@ Vysoké vytížení serveru může zpomalit vaše připojení.</value>
   <data name="Upsell_Carousel_WorldwideCoverage_Countries_Other">
     <value>{0} zemích</value>
   </data>
-  <data name="Upsell_Carousel_WorldwideCoverage_OpenSource">
-    <value>VPN s otevřeným zdrojovým kódem</value>
+  <data name="Upsell_Carousel_WorldwideCoverage_Features">
+    <value>Zabezpečené streamování, torrenty a další</value>
+  </data>
+  <data name="Upsell_Carousel_WorldwideCoverage_Selection">
+    <value>Vyberte si libovolnou zemi z naší celosvětové sítě</value>
   </data>
   <data name="Upsell_Carousel_WorldwideCoverage_Servers_One">
     <value>{0} bezpečnému serveru</value>
