--- a/src/Client/Localization/ProtonVPN.Client.Localization/Strings/fr-FR/Resources.resw
+++ b/src/Client/Localization/ProtonVPN.Client.Localization/Strings/fr-FR/Resources.resw
@@ -294,8 +294,13 @@
   <data name="Common_States_Updating">
     <value>Mise à jour...</value>
   </data>
+  <data name="Common_Tags_Beta">
+    <value>BÊTA</value>
+    <comment>This tag indicates that this version of the app is currently in beta (early access)</comment>
+  </data>
   <data name="Common_Tags_New">
     <value>NOUVEAU</value>
+    <comment>This tag indicates that a newer version of the app is currently available</comment>
   </data>
   <data name="Components_Update_GetMostFromYourVpn">
     <value>Mettez à jour vers la dernière version de l'application pour profiter de tous les avantages de votre VPN.</value>
@@ -1773,6 +1778,39 @@ Une latence élevée peut ralentir votre connexion.</value>
   <data name="Dialogs_Latency_Title">
     <value>Qu'est-ce que la latence ?</value>
   </data>
+  <data name="Dialogs_NpsSurvey_CommentLabel">
+    <value>Faites-nous savoir pourquoi vous avez attribué cette note.</value>
+  </data>
+  <data name="Dialogs_NpsSurvey_ErrorSubtitle">
+    <value>Nous n'avons pas pu envoyer votre commentaire. Nous vous invitons à vérifier votre connexion et à réessayer.</value>
+  </data>
+  <data name="Dialogs_NpsSurvey_ErrorTitle">
+    <value>Une erreur s'est produite.</value>
+  </data>
+  <data name="Dialogs_NpsSurvey_HighRateDescription">
+    <value>10 : Très probable</value>
+  </data>
+  <data name="Dialogs_NpsSurvey_LowRateDescription">
+    <value>0 : Très peu probable</value>
+  </data>
+  <data name="Dialogs_NpsSurvey_Optional">
+    <value>Facultatif</value>
+  </data>
+  <data name="Dialogs_NpsSurvey_ShareAnonymously">
+    <value>Partager anonymement</value>
+  </data>
+  <data name="Dialogs_NpsSurvey_SuccessSubtitle">
+    <value>Vos commentaires nous aident à améliorer Proton VPN.</value>
+  </data>
+  <data name="Dialogs_NpsSurvey_SuccessTitle">
+    <value>Merci pour vos commentaires</value>
+  </data>
+  <data name="Dialogs_NpsSurvey_Title">
+    <value>Quelle est la probabilité que vous recommandiez Proton VPN à un ami ?</value>
+  </data>
+  <data name="Dialogs_NpsSurvey_TryAgain">
+    <value>Réessayer</value>
+  </data>
   <data name="Dialogs_P2PDetection_Description">
     <value>Votre connexion a été désactivée, car vous utilisez un serveur qui ne prend pas en charge le trafic peer-to-peer (P2P). Le P2P n'est pas pris en charge par les serveurs de l'abonnement FREE. Vous devez utiliser un autre serveur pour le P2P.</value>
   </data>
@@ -2039,11 +2077,23 @@ Une charge de serveur élevée peut ralentir votre connexion.</value>
   <data name="Dialogs_WhatsNew_Gateways_Title">
     <value>Les passerelles ont été déplacées</value>
   </data>
+  <data name="Dialogs_WhatsNew_LanConnections_Description">
+    <value>Vous pouvez maintenant vous connecter à des imprimantes, des hautparleurs et d'autres appareils sur votre réseau local (LAN), en contournant le tunnel VPN.</value>
+  </data>
+  <data name="Dialogs_WhatsNew_LanConnections_Title">
+    <value>Connexions LAN</value>
+  </data>
   <data name="Dialogs_WhatsNew_NewLook_Description">
     <value>Nous avons actualisé notre design et nous avons déplacé certains éléments pour que l'application soit plus facile à utiliser.</value>
   </data>
   <data name="Dialogs_WhatsNew_NewLook_Title">
     <value>Nouveau look, même protection</value>
+  </data>
+  <data name="Dialogs_WhatsNew_PortNumber_Description">
+    <value>Lorsque vous activez la redirection de port, vous verrez votre numéro de port actif sur l'écran d'accueil.</value>
+  </data>
+  <data name="Dialogs_WhatsNew_PortNumber_Title">
+    <value>Numéro de port actif</value>
   </data>
   <data name="Dialogs_WhatsNew_Profiles_Description">
     <value>Ajoutez des paramètres de profil avancés, tels que NetShield et la redirection de port, ou configurez Connexion et ouverture pour lancer un site web de votre choix lorsque vous vous connectez.</value>
@@ -2062,6 +2112,12 @@ Une charge de serveur élevée peut ralentir votre connexion.</value>
   </data>
   <data name="Dialogs_WhatsNew_Title">
     <value>Nouveautés</value>
+  </data>
+  <data name="Dialogs_WhatsNew_TrayApp_Description">
+    <value>Vous pouvez maintenant connecter, déconnecter et modifier votre connexion par défaut depuis la zone de notification.</value>
+  </data>
+  <data name="Dialogs_WhatsNew_TrayApp_Title">
+    <value>Nouvelle application de la barre d'état système</value>
   </data>
   <data name="Exit_Confirmation_Title">
     <value>Quitter Proton VPN ?</value>
@@ -2134,6 +2190,9 @@ Une charge de serveur élevée peut ralentir votre connexion.</value>
   </data>
   <data name="Flyouts_KillSwitch_Info">
     <value>Votre adresse IP pourrait être exposée si votre connexion VPN est interrompue.</value>
+  </data>
+  <data name="Flyouts_KillSwitch_Info_Disconnected">
+    <value>L'Arrêt d'urgence (kill switch) avancé désactive votre connexion internet pour protéger votre adresse IP tant que vous n'êtes pas connecté à Proton VPN.</value>
   </data>
   <data name="Flyouts_KillSwitch_Standard_Success">
     <value>Si votre connexion VPN est interrompue, vous serez déconnecté d'internet jusqu'à ce que le VPN soit rétabli.</value>
@@ -2217,20 +2276,20 @@ Une charge de serveur élevée peut ralentir votre connexion.</value>
     <value>Boosté par VPN Accelerator</value>
   </data>
   <data name="Flyouts_Speed_Description1">
-    <value>Cela indique la quantité de données transmises via Proton VPN chaque seconde.</value>
+    <value>Affiche la quantité de données qui passent par le tunnel VPN en temps réel.</value>
   </data>
   <data name="Flyouts_Speed_Description2">
-    <value>La vitesse dépend de l'activité actuelle de votre appareil, elle ne représente pas la vitesse maximale du VPN.</value>
+    <value>Cela dépend de l'activité actuelle de votre appareil. Dans la plupart des cas, cela ne représente pas la vitesse maximale du VPN.</value>
   </data>
   <data name="Flyouts_Speed_Download">
     <value>Téléchargé</value>
     <comment>Refers to the download speed (e.g., Download [new line] 10 MB/s).</comment>
   </data>
   <data name="Flyouts_Speed_KnowledgeBaseLinkTitle">
-    <value>Comprendre et améliorer la rapidité de la connexion en VPN</value>
+    <value>Vitesse et trafic VPN en quelques mots</value>
   </data>
   <data name="Flyouts_Speed_Title">
-    <value>Vitesse</value>
+    <value>Trafic actuel</value>
   </data>
   <data name="Flyouts_Speed_Upload">
     <value>Envoyé</value>
@@ -2276,14 +2335,14 @@ Une charge de serveur élevée peut ralentir votre connexion.</value>
     <value>Obtenez le meilleur des deux mondes.</value>
   </data>
   <data name="Flyouts_Volume_Description">
-    <value>Volume du trafic ayant transité par votre VPN.</value>
+    <value>Affiche la quantité totale de données passées par le tunnel VPN depuis que vous vous êtes connecté.</value>
   </data>
   <data name="Flyouts_Volume_Download">
     <value>Téléchargé</value>
     <comment>Refers to the downloaded volume (e.g., Download [new line] 250 MB).</comment>
   </data>
   <data name="Flyouts_Volume_Title">
-    <value>Volume</value>
+    <value>Trafic total</value>
   </data>
   <data name="Flyouts_Volume_Upload">
     <value>Envoyé</value>
@@ -2322,7 +2381,7 @@ Une charge de serveur élevée peut ralentir votre connexion.</value>
     <comment>Format a size in Terabytes. {0} is a place holder for the number of Terabytes (eg. 30 TB)</comment>
   </data>
   <data name="Format_SpeedUnit">
-    <value>Vitesse ({0})</value>
+    <value>Trafic actuel ({0})</value>
     <comment>This string is used to format speed measurements in various units. The placeholder {0} will be replaced by the appropriate unit of measurement, such as B/s (Bytes per second), kB/s (Kilobytes per second), MB/s (Megabytes per second), and so on.</comment>
   </data>
   <data name="Format_Speed_BytesPerSecond">
@@ -2377,6 +2436,12 @@ Une charge de serveur élevée peut ralentir votre connexion.</value>
     <value>hh\:mm\:ss</value>
     <comment>Format a time as a number of hours, minutes and seconds in a short format. 'hh' is a placeholder for the number of hours, 'mm' is a placeholder for the number of minutes and 'ss' for the number of seconds. The separator (if any) needs to be escaped using '' character (eg. hh\:mm\:ss gives 01:05:36).</comment>
   </data>
+  <data name="Format_Time_Hours_Ago_One">
+    <value>Il y a {0} heure</value>
+  </data>
+  <data name="Format_Time_Hours_Ago_Other">
+    <value>Il y a {0} heures</value>
+  </data>
   <data name="Format_Time_Minutes">
     <value>{0} min</value>
     <comment>Format a time as a number of minutes. {0} is a placeholder for the number of minutes (eg. 1 min or 20 min). Use abbreviations, no pluralization.</comment>
@@ -2389,9 +2454,21 @@ Une charge de serveur élevée peut ralentir votre connexion.</value>
     <value>mm\:ss</value>
     <comment>Format a time as a number of minutes and seconds in a short format. 'mm' is a placeholder for the number of minutes and 'ss' for the number of seconds. The separator (if any) needs to be escaped using '' character (eg. mm\:ss gives 05:36).</comment>
   </data>
+  <data name="Format_Time_Minutes_Ago_One">
+    <value>Il y a {0} minute</value>
+  </data>
+  <data name="Format_Time_Minutes_Ago_Other">
+    <value>Il y a {0} minutes</value>
+  </data>
   <data name="Format_Time_Seconds">
     <value>{0} s</value>
     <comment>Format a time as a number of seconds. {0} is a placeholder for the number of second (eg. 1 sec or 20 sec). Use abbreviations for seconds, no pluralization.</comment>
+  </data>
+  <data name="Format_Time_Seconds_Ago_One">
+    <value>Il y a {0} seconde</value>
+  </data>
+  <data name="Format_Time_Seconds_Ago_Other">
+    <value>il y a {0} secondes</value>
   </data>
   <data name="FreeConnections_P2PUpsell">
     <value>Téléchargez des fichiers depuis BitTorrent ou d'autres protocoles de partage de fichiers.</value>
@@ -2458,8 +2535,14 @@ Une charge de serveur élevée peut ralentir votre connexion.</value>
     <value>Carte de connexion</value>
     <comment>Landmarks are not displayed on screen but read by a screen reader to identify a group of components for accessibility purposes.</comment>
   </data>
+  <data name="Home_ConnectionDetails_AdvancedKillSwitchActivated">
+    <value>La fonctionnalité Arrêt d'urgence (kill switch) avancé est activée.</value>
+  </data>
   <data name="Home_ConnectionDetails_City">
     <value>Ville</value>
+  </data>
+  <data name="Home_ConnectionDetails_ConnectToRestoreConnection">
+    <value>Connectez-vous à un VPN pour restaurer votre connexion internet.</value>
   </data>
   <data name="Home_ConnectionDetails_ConnectedFor">
     <value>Connecté depuis</value>
@@ -2532,7 +2615,7 @@ Une charge de serveur élevée peut ralentir votre connexion.</value>
     <value>Chiffrez vos activités en ligne en vous connectant à un VPN.</value>
   </data>
   <data name="Home_ConnectionDetails_Volume">
-    <value>Volume</value>
+    <value>Trafic total</value>
   </data>
   <data name="Home_ConnectionDetails_Volume_Download">
     <value>Volume de téléchargement</value>
@@ -2743,6 +2826,10 @@ Une charge de serveur élevée peut ralentir votre connexion.</value>
   </data>
   <data name="Notifications_UnsecureWifi_Title">
     <value>Une connexion wifi non sécurisée a été détectée.</value>
+  </data>
+  <data name="NpsSurvey_Title">
+    <value>Enquête de Proton VPN</value>
+    <comment>The window title displayed at the top of the NPS (Net Promoter Score) survey</comment>
   </data>
   <data name="Overlay_OutdatedClient_Action">
     <value>Mettre à jour</value>
@@ -3096,10 +3183,10 @@ Une charge de serveur élevée peut ralentir votre connexion.</value>
     <value>Empêche les fuites IPv6 en bloquant les connexions aux adresses IPv6.</value>
   </data>
   <data name="Settings_Connection_Advanced_LanConnections">
-    <value>Connexions LAN</value>
+    <value>Autoriser les connexions LAN</value>
   </data>
   <data name="Settings_Connection_Advanced_LanConnections_Description">
-    <value>Vous permet de vous connecter à des imprimantes, des enceintes et d'autres appareils du réseau local de votre appareil.</value>
+    <value>Vous pouvez vous connecter à des imprimantes, des enceintes et d'autres appareils du réseau local.</value>
   </data>
   <data name="Settings_Connection_Advanced_NatType">
     <value>Type de NAT</value>
@@ -3236,6 +3323,10 @@ Une charge de serveur élevée peut ralentir votre connexion.</value>
   <data name="Settings_Connection_PortForwarding_Footer">
     <value>Pour utiliser le transfert de port, veuillez vous connecter à un serveur qui prend en charge le P2P.</value>
   </data>
+  <data name="Settings_Connection_PortForwarding_LastChanged">
+    <value>Dernière modification : {0}</value>
+    <comment>Indicates when the active port was changed for the last time. {0} is a placeholder for the time. (eg. "Last changed: 5 minutes ago" or "Last changed: May 20, at 14:32")</comment>
+  </data>
   <data name="Settings_Connection_PortForwarding_Loading">
     <value>Chargement en cours...</value>
   </data>
@@ -3288,10 +3379,14 @@ Une charge de serveur élevée peut ralentir votre connexion.</value>
     <value>Personnalisez votre connexion en décidant quelles applications et adresses IP sont protégées par le VPN.</value>
   </data>
   <data name="Settings_Connection_SplitTunneling_Inverse">
-    <value>Inversé</value>
+    <value>Mode d'inclusion</value>
   </data>
   <data name="Settings_Connection_SplitTunneling_Inverse_Description">
     <value>Seules les applications et adresses IP sélectionnées se connectent par VPN. Tout le reste du trafic n'est pas protégé.</value>
+  </data>
+  <data name="Settings_Connection_SplitTunneling_Inverse_Short">
+    <value>Inclure</value>
+    <comment>Shorter version (if possible) of "Include mode". To be used when available space is limited.</comment>
   </data>
   <data name="Settings_Connection_SplitTunneling_IpAddresses_Add">
     <value>Ajouter une adresse IP</value>
@@ -3307,10 +3402,14 @@ Une charge de serveur élevée peut ralentir votre connexion.</value>
     <value>Ajouter une adresse IPv4</value>
   </data>
   <data name="Settings_Connection_SplitTunneling_Standard">
-    <value>Standard</value>
+    <value>Mode d'exclusion</value>
   </data>
   <data name="Settings_Connection_SplitTunneling_Standard_Description">
     <value>Les applications et adresses IP sélectionnées sont exclues de la connexion VPN.</value>
+  </data>
+  <data name="Settings_Connection_SplitTunneling_Standard_Short">
+    <value>Exclure</value>
+    <comment>Shorter version (if possible) of "Exclude mode". To be used when available space is limited.</comment>
   </data>
   <data name="Settings_Connection_VpnAccelerator">
     <value>VPN Accelerator</value>
@@ -3640,6 +3739,9 @@ Une charge de serveur élevée peut ralentir votre connexion.</value>
     <value>Ouvrir {0}</value>
     <comment>Button displayed in the tray icon to open the Proton VPN application. {0} is a placeholder for the name of the application (eg. "Open Proton VPN")</comment>
   </data>
+  <data name="Tray_Actions_OpenApplicationToSignIn">
+    <value>Ouvrir l'application pour se connecter</value>
+  </data>
   <data name="Unit_BytesPerSecond">
     <value>o/s</value>
     <comment>Unit for Bytes per second</comment>
@@ -3769,13 +3871,16 @@ Une charge de serveur élevée peut ralentir votre connexion.</value>
     <value>Passez par des serveurs ultra-sécurisés en Suisse, en Suède et en Islande.</value>
   </data>
   <data name="Upsell_Carousel_Speed">
-    <value>Naviguez à des vitesses encore plus élevées (jusqu'à 10 Gbit/s).</value>
+    <value>Profitez d'une navigation ultra-rapide</value>
   </data>
   <data name="Upsell_Carousel_Speed_Acceleration">
-    <value>Augmentez votre vitesse de connexion jusqu'à 400 % avec VPN Accelerator.</value>
+    <value>Surfez jusqu'à 400 % plus rapidement avec VPN Accelerator</value>
   </data>
   <data name="Upsell_Carousel_Speed_Access">
     <value>Accédez à des serveurs plus rapides et moins occupés.</value>
+  </data>
+  <data name="Upsell_Carousel_Speed_Traffic">
+    <value>Profitez de vitesses de connexion jusqu'à 10 Gbit/s</value>
   </data>
   <data name="Upsell_Carousel_SplitTunneling">
     <value>Obtenez le meilleur des deux mondes.</value>
@@ -3832,11 +3937,8 @@ Une charge de serveur élevée peut ralentir votre connexion.</value>
     <value>Accédez à plus de {0} dans {1}.</value>
     <comment>Title for the worldwide coverage upsell feature page. {0} is a placeholder for the number of servers (eg. 100 secure servers) and {1} for the number of countries available (eg. 60 countries).</comment>
   </data>
-  <data name="Upsell_Carousel_WorldwideCoverage_Audit">
-    <value>Audité par des experts indépendants en sécurité</value>
-  </data>
   <data name="Upsell_Carousel_WorldwideCoverage_Censorship">
-    <value>Contournez la censure avec des fonctionnalités avancées de sécurité et de confidentialité</value>
+    <value>Contournez la censure avec des fonctionnalités avancées de sécurité</value>
   </data>
   <data name="Upsell_Carousel_WorldwideCoverage_Countries_One">
     <value>{0} pays</value>
@@ -3844,8 +3946,11 @@ Une charge de serveur élevée peut ralentir votre connexion.</value>
   <data name="Upsell_Carousel_WorldwideCoverage_Countries_Other">
     <value>{0} pays</value>
   </data>
-  <data name="Upsell_Carousel_WorldwideCoverage_OpenSource">
-    <value>VPN open source</value>
+  <data name="Upsell_Carousel_WorldwideCoverage_Features">
+    <value>Streaming, torrenting et bien plus encore, en toute sécurité.</value>
+  </data>
+  <data name="Upsell_Carousel_WorldwideCoverage_Selection">
+    <value>Sélectionnez n'importe quel pays de notre réseau mondial</value>
   </data>
   <data name="Upsell_Carousel_WorldwideCoverage_Servers_One">
     <value>{0} serveur sécurisé</value>
