--- a/src/Client/Localization/ProtonVPN.Client.Localization/Strings/ko-KR/Resources.resw
+++ b/src/Client/Localization/ProtonVPN.Client.Localization/Strings/ko-KR/Resources.resw
@@ -294,8 +294,13 @@
   <data name="Common_States_Updating">
     <value>업데이트 중...</value>
   </data>
+  <data name="Common_Tags_Beta">
+    <value>BETA</value>
+    <comment>This tag indicates that this version of the app is currently in beta (early access)</comment>
+  </data>
   <data name="Common_Tags_New">
     <value>신규</value>
+    <comment>This tag indicates that a newer version of the app is currently available</comment>
   </data>
   <data name="Components_Update_GetMostFromYourVpn">
     <value>최신 버전으로 업데이트하여 VPN을 최대한 활용해 보세요.</value>
@@ -1701,6 +1706,39 @@
   <data name="Dialogs_Latency_Title">
     <value>레이턴시라는 것은?</value>
   </data>
+  <data name="Dialogs_NpsSurvey_CommentLabel">
+    <value>Please let us know why you gave that rating</value>
+  </data>
+  <data name="Dialogs_NpsSurvey_ErrorSubtitle">
+    <value>We couldn't send your feedback. Please check your connection and try again.</value>
+  </data>
+  <data name="Dialogs_NpsSurvey_ErrorTitle">
+    <value>Something went wrong</value>
+  </data>
+  <data name="Dialogs_NpsSurvey_HighRateDescription">
+    <value>10 is very likely</value>
+  </data>
+  <data name="Dialogs_NpsSurvey_LowRateDescription">
+    <value>0 is very unlikely</value>
+  </data>
+  <data name="Dialogs_NpsSurvey_Optional">
+    <value>Optional</value>
+  </data>
+  <data name="Dialogs_NpsSurvey_ShareAnonymously">
+    <value>Share anonymously</value>
+  </data>
+  <data name="Dialogs_NpsSurvey_SuccessSubtitle">
+    <value>Your feedback helps us improve Proton VPN.</value>
+  </data>
+  <data name="Dialogs_NpsSurvey_SuccessTitle">
+    <value>Thanks for your feedback</value>
+  </data>
+  <data name="Dialogs_NpsSurvey_Title">
+    <value>How likely are you to recommend Proton VPN to a friend?</value>
+  </data>
+  <data name="Dialogs_NpsSurvey_TryAgain">
+    <value>Try again</value>
+  </data>
   <data name="Dialogs_P2PDetection_Description">
     <value>사용 중인 서버가 P2P 트래픽을 지원하지 않아 연결이 해제되었습니다. P2P는 무료 서버에서 지원되지 않습니다. P2P를 지원하는 다른 서버를 사용해 주세요.</value>
   </data>
@@ -1959,16 +1997,28 @@
     <value>Proton VPN에 오신 것을 환영합니다</value>
   </data>
   <data name="Dialogs_WhatsNew_Gateways_Description">
-    <value>이제 메인 사이드바에서 조직의 전용 서버에 접근할 수 있어요.</value>
+    <value>You can now access your organization's dedicated servers from the main sidebar.</value>
   </data>
   <data name="Dialogs_WhatsNew_Gateways_Title">
     <value>게이트웨이 위치 변경</value>
+  </data>
+  <data name="Dialogs_WhatsNew_LanConnections_Description">
+    <value>You can now connect to printers, speakers, and other devices on your local network (LAN), bypassing the VPN tunnel.</value>
+  </data>
+  <data name="Dialogs_WhatsNew_LanConnections_Title">
+    <value>LAN connections</value>
   </data>
   <data name="Dialogs_WhatsNew_NewLook_Description">
     <value>앱을 더 쉽게 사용하실 수 있도록 새로 디자인하고 몇 가지 요소를 이동시켰어요.</value>
   </data>
   <data name="Dialogs_WhatsNew_NewLook_Title">
     <value>달라 보여도, 똑같은 보호</value>
+  </data>
+  <data name="Dialogs_WhatsNew_PortNumber_Description">
+    <value>When port forwarding is enabled, you'll now see your active port number on the home screen.</value>
+  </data>
+  <data name="Dialogs_WhatsNew_PortNumber_Title">
+    <value>Active port number</value>
   </data>
   <data name="Dialogs_WhatsNew_Profiles_Description">
     <value>NetShield 및 포트 포워딩과 같은 고급 프로필 설정을 추가하거나 연결 및 시작하기 기능을 설정하여 VPN 연결과 동시에 설정한 웹 사이트도 바로 열 수 있어요.</value>
@@ -1987,6 +2037,12 @@
   </data>
   <data name="Dialogs_WhatsNew_Title">
     <value>새로운 소식</value>
+  </data>
+  <data name="Dialogs_WhatsNew_TrayApp_Description">
+    <value>You can now connect, disconnect, and change your default connection from the system tray.</value>
+  </data>
+  <data name="Dialogs_WhatsNew_TrayApp_Title">
+    <value>New system tray app</value>
   </data>
   <data name="Exit_Confirmation_Title">
     <value>Proton VPN을 종료합니까?</value>
@@ -2059,6 +2115,9 @@
   </data>
   <data name="Flyouts_KillSwitch_Info">
     <value>VPN 연결이 끊어지면 IP 주소가 노출될 수 있습니다.</value>
+  </data>
+  <data name="Flyouts_KillSwitch_Info_Disconnected">
+    <value>Advanced kill switch disables your internet to protect your IP address while you're not connected to Proton VPN.</value>
   </data>
   <data name="Flyouts_KillSwitch_Standard_Success">
     <value>VPN 연결이 끊어지면 VPN이 복원될 때까지 인터넷 연결이 끊어집니다.</value>
@@ -2142,20 +2201,20 @@
     <value>VPN Accelerator로 가속됨</value>
   </data>
   <data name="Flyouts_Speed_Description1">
-    <value>이 값은 Proton VPN을 통해 매초 얼마나 많은 데이터가 전송되는지 보여줍니다.</value>
+    <value>Shows how much data goes through the VPN tunnel in real time.</value>
   </data>
   <data name="Flyouts_Speed_Description2">
-    <value>속도는 회원님 기기의 현재 활동에 기반합니다 — VPN의 최소 속도를 나타내지 않습니다.</value>
+    <value>This is based on your device's current activity. In most cases, it doesn't represent the VPN's maximum speed.</value>
   </data>
   <data name="Flyouts_Speed_Download">
     <value>다운로드</value>
     <comment>Refers to the download speed (e.g., Download [new line] 10 MB/s).</comment>
   </data>
   <data name="Flyouts_Speed_KnowledgeBaseLinkTitle">
-    <value>VPN 연결 속도를 이해하고 증가시키기</value>
+    <value>VPN speed and traffic explained</value>
   </data>
   <data name="Flyouts_Speed_Title">
-    <value>속도</value>
+    <value>Current traffic</value>
   </data>
   <data name="Flyouts_Speed_Upload">
     <value>업로드</value>
@@ -2189,14 +2248,14 @@
     <value>하나로 두 가지 이득을 얻으세요</value>
   </data>
   <data name="Flyouts_Volume_Description">
-    <value>이 자료는 VPN이 통해 얼마나 많은 트래픽을 라우팅했는지 보여줍니다.</value>
+    <value>Shows the total amount of data passed through the VPN tunnel since you connected.</value>
   </data>
   <data name="Flyouts_Volume_Download">
     <value>다운로드</value>
     <comment>Refers to the downloaded volume (e.g., Download [new line] 250 MB).</comment>
   </data>
   <data name="Flyouts_Volume_Title">
-    <value>이용량</value>
+    <value>Total traffic</value>
   </data>
   <data name="Flyouts_Volume_Upload">
     <value>업로드</value>
@@ -2235,7 +2294,7 @@
     <comment>Format a size in Terabytes. {0} is a place holder for the number of Terabytes (eg. 30 TB)</comment>
   </data>
   <data name="Format_SpeedUnit">
-    <value>속도 ({0})</value>
+    <value>Current traffic ({0})</value>
     <comment>This string is used to format speed measurements in various units. The placeholder {0} will be replaced by the appropriate unit of measurement, such as B/s (Bytes per second), kB/s (Kilobytes per second), MB/s (Megabytes per second), and so on.</comment>
   </data>
   <data name="Format_Speed_BytesPerSecond">
@@ -2284,6 +2343,9 @@
     <value>hh\:mm\:ss</value>
     <comment>Format a time as a number of hours, minutes and seconds in a short format. 'hh' is a placeholder for the number of hours, 'mm' is a placeholder for the number of minutes and 'ss' for the number of seconds. The separator (if any) needs to be escaped using '' character (eg. hh\:mm\:ss gives 01:05:36).</comment>
   </data>
+  <data name="Format_Time_Hours_Ago_Other">
+    <value>{0} hours ago</value>
+  </data>
   <data name="Format_Time_Minutes">
     <value>{0}분</value>
     <comment>Format a time as a number of minutes. {0} is a placeholder for the number of minutes (eg. 1 min or 20 min). Use abbreviations, no pluralization.</comment>
@@ -2296,9 +2358,15 @@
     <value>mm\:ss</value>
     <comment>Format a time as a number of minutes and seconds in a short format. 'mm' is a placeholder for the number of minutes and 'ss' for the number of seconds. The separator (if any) needs to be escaped using '' character (eg. mm\:ss gives 05:36).</comment>
   </data>
+  <data name="Format_Time_Minutes_Ago_Other">
+    <value>{0} minutes ago</value>
+  </data>
   <data name="Format_Time_Seconds">
     <value>{0}초</value>
     <comment>Format a time as a number of seconds. {0} is a placeholder for the number of second (eg. 1 sec or 20 sec). Use abbreviations for seconds, no pluralization.</comment>
+  </data>
+  <data name="Format_Time_Seconds_Ago_Other">
+    <value>{0} seconds ago</value>
   </data>
   <data name="FreeConnections_P2PUpsell">
     <value>BitTorrent와 다른 파일 공유 프로토콜로 파일을 다운로드하세요</value>
@@ -2365,8 +2433,14 @@
     <value>연결 카드</value>
     <comment>Landmarks are not displayed on screen but read by a screen reader to identify a group of components for accessibility purposes.</comment>
   </data>
+  <data name="Home_ConnectionDetails_AdvancedKillSwitchActivated">
+    <value>Advanced kill switch activated</value>
+  </data>
   <data name="Home_ConnectionDetails_City">
     <value>시/군/구</value>
+  </data>
+  <data name="Home_ConnectionDetails_ConnectToRestoreConnection">
+    <value>Connect to VPN to restore your internet connection.</value>
   </data>
   <data name="Home_ConnectionDetails_ConnectedFor">
     <value>연결된 시간</value>
@@ -2439,7 +2513,7 @@
     <value>VPN을 연결하여 온라인 활동을 암호화하세요.</value>
   </data>
   <data name="Home_ConnectionDetails_Volume">
-    <value>이용량</value>
+    <value>Total traffic</value>
   </data>
   <data name="Home_ConnectionDetails_Volume_Download">
     <value>볼륨 다운로드</value>
@@ -2634,7 +2708,7 @@
     <value>더 빠른 속도를 위해 BitTorrent 앱에서 이 번호로 설정하세요.</value>
   </data>
   <data name="Notifications_SessionLimit_Description">
-    <value>최대 기기 수 제한에 도달했습니다. VPN에 다시 연결하기 위해, 다른 기기에서 연결 해제해주세요.</value>
+    <value>You've reached your maximum device limit. To reconnect to VPN, please disconnect from another device.</value>
   </data>
   <data name="Notifications_SubscriptionExpired_Description_Connected">
     <value>사용자의 플랜이 Proton Free로 다운그레이드 되어, 가장 빠른 무료 서버로 재연결 중입니다.</value>
@@ -2644,6 +2718,10 @@
   </data>
   <data name="Notifications_UnsecureWifi_Title">
     <value>보호되지 않는 Wi-Fi 연결 감지됨</value>
+  </data>
+  <data name="NpsSurvey_Title">
+    <value>Proton VPN - Survey</value>
+    <comment>The window title displayed at the top of the NPS (Net Promoter Score) survey</comment>
   </data>
   <data name="Overlay_OutdatedClient_Action">
     <value>지금 업데이트하기</value>
@@ -2997,10 +3075,10 @@ VPN 연결</value>
     <value>IPv6 주소로의 연결을 차단하여 IPv6 유출을 방지합니다.</value>
   </data>
   <data name="Settings_Connection_Advanced_LanConnections">
-    <value>LAN 연결</value>
+    <value>Allow LAN connections</value>
   </data>
   <data name="Settings_Connection_Advanced_LanConnections_Description">
-    <value>로컬 네트워크에 있는 프린터, 스피커 및 기타 기기에 연결할 수 있게 합니다.</value>
+    <value>Allows connections to printers, speakers, and other devices in your local network.</value>
   </data>
   <data name="Settings_Connection_Advanced_NatType">
     <value>NAT 방식</value>
@@ -3137,6 +3215,10 @@ VPN 연결</value>
   <data name="Settings_Connection_PortForwarding_Footer">
     <value>포트 포워딩을 사용하려면 P2P를 지원하는 서버에 연결하세요.</value>
   </data>
+  <data name="Settings_Connection_PortForwarding_LastChanged">
+    <value>Last changed: {0}</value>
+    <comment>Indicates when the active port was changed for the last time. {0} is a placeholder for the time. (eg. "Last changed: 5 minutes ago" or "Last changed: May 20, at 14:32")</comment>
+  </data>
   <data name="Settings_Connection_PortForwarding_Loading">
     <value>로딩 중...</value>
   </data>
@@ -3189,10 +3271,14 @@ VPN 연결</value>
     <value>VPN이 보호할 앱과 IP 주소를 지정하여 연결을 사용자화할 수 있습니다.</value>
   </data>
   <data name="Settings_Connection_SplitTunneling_Inverse">
-    <value>반전</value>
+    <value>Include mode</value>
   </data>
   <data name="Settings_Connection_SplitTunneling_Inverse_Description">
     <value>선택된 앱과 IP 주소만이 VPN에 연결되고 그 외 트래픽은 보호되지 않습니다.</value>
+  </data>
+  <data name="Settings_Connection_SplitTunneling_Inverse_Short">
+    <value>Include</value>
+    <comment>Shorter version (if possible) of "Include mode". To be used when available space is limited.</comment>
   </data>
   <data name="Settings_Connection_SplitTunneling_IpAddresses_Add">
     <value>IP 추가</value>
@@ -3208,10 +3294,14 @@ VPN 연결</value>
     <value>IPv4 주소 추가</value>
   </data>
   <data name="Settings_Connection_SplitTunneling_Standard">
-    <value>표준</value>
+    <value>Exclude mode</value>
   </data>
   <data name="Settings_Connection_SplitTunneling_Standard_Description">
     <value>VPN 연결에서 제외될 앱들과 IP주소들을 선택하세요</value>
+  </data>
+  <data name="Settings_Connection_SplitTunneling_Standard_Short">
+    <value>Exclude</value>
+    <comment>Shorter version (if possible) of "Exclude mode". To be used when available space is limited.</comment>
   </data>
   <data name="Settings_Connection_VpnAccelerator">
     <value>VPN Accelerator</value>
@@ -3541,6 +3631,9 @@ VPN 연결</value>
     <value>{0} 열기</value>
     <comment>Button displayed in the tray icon to open the Proton VPN application. {0} is a placeholder for the name of the application (eg. "Open Proton VPN")</comment>
   </data>
+  <data name="Tray_Actions_OpenApplicationToSignIn">
+    <value>Open app to sign in</value>
+  </data>
   <data name="Unit_BytesPerSecond">
     <value>B/초</value>
     <comment>Unit for Bytes per second</comment>
@@ -3670,13 +3763,16 @@ VPN 연결</value>
     <value>스위스, 스웨덴과 아이슬란드의 아주 안전한 서버를 통해 라우팅하세요</value>
   </data>
   <data name="Upsell_Carousel_Speed">
-    <value>가장 빠른 속도로 브라우징하세요 (최대 10 Gbps)</value>
+    <value>Browse at even higher speeds</value>
   </data>
   <data name="Upsell_Carousel_Speed_Acceleration">
-    <value>VPN Accelerator로 연결 속도를 최대 400%까지 올려보세요</value>
+    <value>Browse up to 400% faster with VPN Accelerator</value>
   </data>
   <data name="Upsell_Carousel_Speed_Access">
     <value>빠르고, 더 여유있는 서버에 접근하세요</value>
+  </data>
+  <data name="Upsell_Carousel_Speed_Traffic">
+    <value>Get connection speeds of up to 10 Gbps</value>
   </data>
   <data name="Upsell_Carousel_SplitTunneling">
     <value>하나로 두 가지 이득을 얻으세요</value>
@@ -3733,17 +3829,17 @@ VPN 연결</value>
     <value>{1}에서 {0}에 액세스</value>
     <comment>Title for the worldwide coverage upsell feature page. {0} is a placeholder for the number of servers (eg. 100 secure servers) and {1} for the number of countries available (eg. 60 countries).</comment>
   </data>
-  <data name="Upsell_Carousel_WorldwideCoverage_Audit">
-    <value>독립 보안 전문가에 의한 감사를 받았습니다</value>
-  </data>
   <data name="Upsell_Carousel_WorldwideCoverage_Censorship">
-    <value>향상된 보안과 개인정보 보호 기능으로 검열을 벗어나세요</value>
+    <value>Bypass censorship with advanced security features</value>
   </data>
   <data name="Upsell_Carousel_WorldwideCoverage_Countries_Other">
     <value>{0} 국가</value>
   </data>
-  <data name="Upsell_Carousel_WorldwideCoverage_OpenSource">
-    <value>오픈 소스 VPN</value>
+  <data name="Upsell_Carousel_WorldwideCoverage_Features">
+    <value>Secure streaming, torrenting, and more</value>
+  </data>
+  <data name="Upsell_Carousel_WorldwideCoverage_Selection">
+    <value>Select any country from our worldwide network</value>
   </data>
   <data name="Upsell_Carousel_WorldwideCoverage_Servers_Other">
     <value>{0}개 보안 서버</value>
