--- a/src/Client/Localization/ProtonVPN.Client.Localization/Strings/nl-NL/Resources.resw
+++ b/src/Client/Localization/ProtonVPN.Client.Localization/Strings/nl-NL/Resources.resw
@@ -294,8 +294,13 @@
   <data name="Common_States_Updating">
     <value>Bijwerken...</value>
   </data>
+  <data name="Common_Tags_Beta">
+    <value>BETA</value>
+    <comment>This tag indicates that this version of the app is currently in beta (early access)</comment>
+  </data>
   <data name="Common_Tags_New">
     <value>NIEUW</value>
+    <comment>This tag indicates that a newer version of the app is currently available</comment>
   </data>
   <data name="Components_Update_GetMostFromYourVpn">
     <value>Haal het meeste uit uw VPN door bij te werken naar de nieuwste versie van de app.</value>
@@ -1773,6 +1778,39 @@
   <data name="Dialogs_Latency_Title">
     <value>Wat is latentie?</value>
   </data>
+  <data name="Dialogs_NpsSurvey_CommentLabel">
+    <value>Laat ons weten waarom u die beoordeling heeft gegeven</value>
+  </data>
+  <data name="Dialogs_NpsSurvey_ErrorSubtitle">
+    <value>We konden uw feedback niet verzenden. Controleer uw verbinding en probeer het opnieuw.</value>
+  </data>
+  <data name="Dialogs_NpsSurvey_ErrorTitle">
+    <value>Er is iets fout gegaan</value>
+  </data>
+  <data name="Dialogs_NpsSurvey_HighRateDescription">
+    <value>10 is zeer waarschijnlijk</value>
+  </data>
+  <data name="Dialogs_NpsSurvey_LowRateDescription">
+    <value>0 is zeer onwaarschijnlijk</value>
+  </data>
+  <data name="Dialogs_NpsSurvey_Optional">
+    <value>Optioneel</value>
+  </data>
+  <data name="Dialogs_NpsSurvey_ShareAnonymously">
+    <value>Anoniem delen</value>
+  </data>
+  <data name="Dialogs_NpsSurvey_SuccessSubtitle">
+    <value>Uw feedback helpt ons Proton VPN te verbeteren.</value>
+  </data>
+  <data name="Dialogs_NpsSurvey_SuccessTitle">
+    <value>Bedankt voor uw feedback</value>
+  </data>
+  <data name="Dialogs_NpsSurvey_Title">
+    <value>Hoe waarschijnlijk is het dat u Proton VPN aan een vriend zult aanbevelen?</value>
+  </data>
+  <data name="Dialogs_NpsSurvey_TryAgain">
+    <value>Probeer opnieuw</value>
+  </data>
   <data name="Dialogs_P2PDetection_Description">
     <value>Uw verbinding is uitgeschakeld omdat u gebruik maakt van een server die geen peer-to-peer (P2P) verkeer ondersteunt. P2P wordt niet ondersteund op gratis servers. Gebruik een andere server voor P2P.</value>
   </data>
@@ -2034,16 +2072,28 @@
     <value>Welkom bij Proton VPN</value>
   </data>
   <data name="Dialogs_WhatsNew_Gateways_Description">
-    <value>U heeft nu toegang to de specifieke servers van uw organisatie vanuit de hoofdnavigatie.</value>
+    <value>You can now access your organization's dedicated servers from the main sidebar.</value>
   </data>
   <data name="Dialogs_WhatsNew_Gateways_Title">
     <value>Gateways zijn verplaatst</value>
+  </data>
+  <data name="Dialogs_WhatsNew_LanConnections_Description">
+    <value>You can now connect to printers, speakers, and other devices on your local network (LAN), bypassing the VPN tunnel.</value>
+  </data>
+  <data name="Dialogs_WhatsNew_LanConnections_Title">
+    <value>LAN connections</value>
   </data>
   <data name="Dialogs_WhatsNew_NewLook_Description">
     <value>We hebben onze ontwerpen vernieuwd en enkele dingen verplaatst om de app gemakkelijker te kunnen gebruiken.</value>
   </data>
   <data name="Dialogs_WhatsNew_NewLook_Title">
     <value>Nieuw uiterlijk, dezelfde beveiliging</value>
+  </data>
+  <data name="Dialogs_WhatsNew_PortNumber_Description">
+    <value>When port forwarding is enabled, you'll now see your active port number on the home screen.</value>
+  </data>
+  <data name="Dialogs_WhatsNew_PortNumber_Title">
+    <value>Active port number</value>
   </data>
   <data name="Dialogs_WhatsNew_Profiles_Description">
     <value>Voeg geavanceerde profielinstellingen toe zoals NetShield en port forwarding, of stel Verbinden en doorgaan in om naar een specifieke website te gaan als u verbinding maakt.</value>
@@ -2062,6 +2112,12 @@
   </data>
   <data name="Dialogs_WhatsNew_Title">
     <value>Wat is er nieuw</value>
+  </data>
+  <data name="Dialogs_WhatsNew_TrayApp_Description">
+    <value>You can now connect, disconnect, and change your default connection from the system tray.</value>
+  </data>
+  <data name="Dialogs_WhatsNew_TrayApp_Title">
+    <value>New system tray app</value>
   </data>
   <data name="Exit_Confirmation_Title">
     <value>Proton VPN sluiten?</value>
@@ -2134,6 +2190,9 @@
   </data>
   <data name="Flyouts_KillSwitch_Info">
     <value>Uw IP-adres kan worden blootgesteld als uw VPN-verbinding wegvalt</value>
+  </data>
+  <data name="Flyouts_KillSwitch_Info_Disconnected">
+    <value>Advanced kill switch disables your internet to protect your IP address while you're not connected to Proton VPN.</value>
   </data>
   <data name="Flyouts_KillSwitch_Standard_Success">
     <value>Als uw VPN-verbinding wegvalt, wordt u losgekoppeld van het internet totdat de VPN is hersteld</value>
@@ -2217,20 +2276,20 @@
     <value>Geboost door VPN Accelerator</value>
   </data>
   <data name="Flyouts_Speed_Description1">
-    <value>Dit laat zien hoeveel gegevens elke seconde via Proton VPN worden verzonden.</value>
+    <value>Shows how much data goes through the VPN tunnel in real time.</value>
   </data>
   <data name="Flyouts_Speed_Description2">
-    <value>Snelheid is gebaseerd op de huidige activiteit van je apparaat - het geeft niet de maximale snelheid aan van de VPN.</value>
+    <value>This is based on your device's current activity. In most cases, it doesn't represent the VPN's maximum speed.</value>
   </data>
   <data name="Flyouts_Speed_Download">
     <value>Download</value>
     <comment>Refers to the download speed (e.g., Download [new line] 10 MB/s).</comment>
   </data>
   <data name="Flyouts_Speed_KnowledgeBaseLinkTitle">
-    <value>VPN-verbindingssnelheden begrijpen en verbeteren</value>
+    <value>VPN speed and traffic explained</value>
   </data>
   <data name="Flyouts_Speed_Title">
-    <value>Snelheid</value>
+    <value>Current traffic</value>
   </data>
   <data name="Flyouts_Speed_Upload">
     <value>Upload</value>
@@ -2276,14 +2335,14 @@
     <value>Krijg het beste van beide werelden</value>
   </data>
   <data name="Flyouts_Volume_Description">
-    <value>Dit laat zien hoeveel verkeer via uw VPN is doorgestuurd.</value>
+    <value>Shows the total amount of data passed through the VPN tunnel since you connected.</value>
   </data>
   <data name="Flyouts_Volume_Download">
     <value>Download</value>
     <comment>Refers to the downloaded volume (e.g., Download [new line] 250 MB).</comment>
   </data>
   <data name="Flyouts_Volume_Title">
-    <value>Volume</value>
+    <value>Total traffic</value>
   </data>
   <data name="Flyouts_Volume_Upload">
     <value>Upload</value>
@@ -2322,7 +2381,7 @@
     <comment>Format a size in Terabytes. {0} is a place holder for the number of Terabytes (eg. 30 TB)</comment>
   </data>
   <data name="Format_SpeedUnit">
-    <value>Snelheid ({0})</value>
+    <value>Current traffic ({0})</value>
     <comment>This string is used to format speed measurements in various units. The placeholder {0} will be replaced by the appropriate unit of measurement, such as B/s (Bytes per second), kB/s (Kilobytes per second), MB/s (Megabytes per second), and so on.</comment>
   </data>
   <data name="Format_Speed_BytesPerSecond">
@@ -2377,6 +2436,12 @@
     <value>hh\:mm\:ss</value>
     <comment>Format a time as a number of hours, minutes and seconds in a short format. 'hh' is a placeholder for the number of hours, 'mm' is a placeholder for the number of minutes and 'ss' for the number of seconds. The separator (if any) needs to be escaped using '' character (eg. hh\:mm\:ss gives 01:05:36).</comment>
   </data>
+  <data name="Format_Time_Hours_Ago_One">
+    <value>{0} hour ago</value>
+  </data>
+  <data name="Format_Time_Hours_Ago_Other">
+    <value>{0} hours ago</value>
+  </data>
   <data name="Format_Time_Minutes">
     <value>{0} min</value>
     <comment>Format a time as a number of minutes. {0} is a placeholder for the number of minutes (eg. 1 min or 20 min). Use abbreviations, no pluralization.</comment>
@@ -2389,9 +2454,21 @@
     <value>mm\:ss</value>
     <comment>Format a time as a number of minutes and seconds in a short format. 'mm' is a placeholder for the number of minutes and 'ss' for the number of seconds. The separator (if any) needs to be escaped using '' character (eg. mm\:ss gives 05:36).</comment>
   </data>
+  <data name="Format_Time_Minutes_Ago_One">
+    <value>{0} minute ago</value>
+  </data>
+  <data name="Format_Time_Minutes_Ago_Other">
+    <value>{0} minutes ago</value>
+  </data>
   <data name="Format_Time_Seconds">
     <value>{0} sec</value>
     <comment>Format a time as a number of seconds. {0} is a placeholder for the number of second (eg. 1 sec or 20 sec). Use abbreviations for seconds, no pluralization.</comment>
+  </data>
+  <data name="Format_Time_Seconds_Ago_One">
+    <value>{0} second ago</value>
+  </data>
+  <data name="Format_Time_Seconds_Ago_Other">
+    <value>{0} seconds ago</value>
   </data>
   <data name="FreeConnections_P2PUpsell">
     <value>Download bestanden via BitTorrent en andere protocollen voor bestandsdeling</value>
@@ -2458,8 +2535,14 @@
     <value>Verbindingskaart</value>
     <comment>Landmarks are not displayed on screen but read by a screen reader to identify a group of components for accessibility purposes.</comment>
   </data>
+  <data name="Home_ConnectionDetails_AdvancedKillSwitchActivated">
+    <value>Advanced kill switch activated</value>
+  </data>
   <data name="Home_ConnectionDetails_City">
     <value>Stad</value>
+  </data>
+  <data name="Home_ConnectionDetails_ConnectToRestoreConnection">
+    <value>Connect to VPN to restore your internet connection.</value>
   </data>
   <data name="Home_ConnectionDetails_ConnectedFor">
     <value>Verbonden</value>
@@ -2532,7 +2615,7 @@
     <value>Versleutel uw online activiteit door te verbinden met VPN.</value>
   </data>
   <data name="Home_ConnectionDetails_Volume">
-    <value>Volume</value>
+    <value>Total traffic</value>
   </data>
   <data name="Home_ConnectionDetails_Volume_Download">
     <value>Downloadvolume</value>
@@ -2733,7 +2816,7 @@
     <value>Stel dit nummer in uw BitTorrent-app in voor hogere snelheid.</value>
   </data>
   <data name="Notifications_SessionLimit_Description">
-    <value>U hebt uw maximale apparaatlimiet bereikt. Om opnieuw verbinding te maken met VPN, verbreek de verbinding met een ander apparaat.</value>
+    <value>You've reached your maximum device limit. To reconnect to VPN, please disconnect from another device.</value>
   </data>
   <data name="Notifications_SubscriptionExpired_Description_Connected">
     <value>Uw abonnement is gedowngraded naar Proton Free, en we verbinden u opnieuw met de snelste gratis server.</value>
@@ -2743,6 +2826,10 @@
   </data>
   <data name="Notifications_UnsecureWifi_Title">
     <value>Onveilige wifi-verbinding gedetecteerd</value>
+  </data>
+  <data name="NpsSurvey_Title">
+    <value>Proton VPN - Survey</value>
+    <comment>The window title displayed at the top of the NPS (Net Promoter Score) survey</comment>
   </data>
   <data name="Overlay_OutdatedClient_Action">
     <value>Nu updaten</value>
@@ -3096,10 +3183,10 @@ VPN-verbinding</value>
     <value>Voorkomt IPv6-lekken door verbindingen naar IPv6-adressen te blokkeren.</value>
   </data>
   <data name="Settings_Connection_Advanced_LanConnections">
-    <value>LAN-verbindingen</value>
+    <value>Allow LAN connections</value>
   </data>
   <data name="Settings_Connection_Advanced_LanConnections_Description">
-    <value>Hiermee kunt u verbinding maken met printers, luidsprekers en andere apparaten in het lokale netwerk van uw apparaat.</value>
+    <value>Allows connections to printers, speakers, and other devices in your local network.</value>
   </data>
   <data name="Settings_Connection_Advanced_NatType">
     <value>NAT-type</value>
@@ -3236,6 +3323,10 @@ VPN-verbinding</value>
   <data name="Settings_Connection_PortForwarding_Footer">
     <value>Maak verbinding met een server die P2P ondersteunt om port forwarding te gebruiken.</value>
   </data>
+  <data name="Settings_Connection_PortForwarding_LastChanged">
+    <value>Last changed: {0}</value>
+    <comment>Indicates when the active port was changed for the last time. {0} is a placeholder for the time. (eg. "Last changed: 5 minutes ago" or "Last changed: May 20, at 14:32")</comment>
+  </data>
   <data name="Settings_Connection_PortForwarding_Loading">
     <value>Bezig met laden...</value>
   </data>
@@ -3288,10 +3379,14 @@ VPN-verbinding</value>
     <value>Pas uw verbinding aan door te beslissen welke apps en IP-adressen worden beschermd door VPN.</value>
   </data>
   <data name="Settings_Connection_SplitTunneling_Inverse">
-    <value>Omgekeerd</value>
+    <value>Include mode</value>
   </data>
   <data name="Settings_Connection_SplitTunneling_Inverse_Description">
     <value>Alleen geselecteerde apps en IP-adressen maken verbinding via VPN. Al het andere verkeer is onbeschermd</value>
+  </data>
+  <data name="Settings_Connection_SplitTunneling_Inverse_Short">
+    <value>Include</value>
+    <comment>Shorter version (if possible) of "Include mode". To be used when available space is limited.</comment>
   </data>
   <data name="Settings_Connection_SplitTunneling_IpAddresses_Add">
     <value>IP toevoegen</value>
@@ -3307,10 +3402,14 @@ VPN-verbinding</value>
     <value>IPv4-adres toevoegen</value>
   </data>
   <data name="Settings_Connection_SplitTunneling_Standard">
-    <value>Standaard</value>
+    <value>Exclude mode</value>
   </data>
   <data name="Settings_Connection_SplitTunneling_Standard_Description">
     <value>Geselecteerde apps en IP-adressen zijn uitgesloten van de VPN-verbinding</value>
+  </data>
+  <data name="Settings_Connection_SplitTunneling_Standard_Short">
+    <value>Exclude</value>
+    <comment>Shorter version (if possible) of "Exclude mode". To be used when available space is limited.</comment>
   </data>
   <data name="Settings_Connection_VpnAccelerator">
     <value>VPN Accelerator</value>
@@ -3640,6 +3739,9 @@ VPN-verbinding</value>
     <value>{0} openen</value>
     <comment>Button displayed in the tray icon to open the Proton VPN application. {0} is a placeholder for the name of the application (eg. "Open Proton VPN")</comment>
   </data>
+  <data name="Tray_Actions_OpenApplicationToSignIn">
+    <value>Open app to sign in</value>
+  </data>
   <data name="Unit_BytesPerSecond">
     <value>B/s</value>
     <comment>Unit for Bytes per second</comment>
@@ -3769,13 +3871,16 @@ VPN-verbinding</value>
     <value>Routeer via ultrabeveiligde servers in Zwitserland, Zweden en IJsland</value>
   </data>
   <data name="Upsell_Carousel_Speed">
-    <value>Browse met nog hogere snelheden (tot 10 Gbps)</value>
+    <value>Browse at even higher speeds</value>
   </data>
   <data name="Upsell_Carousel_Speed_Acceleration">
-    <value>Verhoog uw verbindingssnelheden met tot wel 400% met VPN Accelerator</value>
+    <value>Browse up to 400% faster with VPN Accelerator</value>
   </data>
   <data name="Upsell_Carousel_Speed_Access">
     <value>Krijg toegang tot snellere, minder drukke servers</value>
+  </data>
+  <data name="Upsell_Carousel_Speed_Traffic">
+    <value>Get connection speeds of up to 10 Gbps</value>
   </data>
   <data name="Upsell_Carousel_SplitTunneling">
     <value>Krijg het beste van beide werelden</value>
@@ -3832,11 +3937,8 @@ VPN-verbinding</value>
     <value>Toegang tot meer dan {0} in {1}</value>
     <comment>Title for the worldwide coverage upsell feature page. {0} is a placeholder for the number of servers (eg. 100 secure servers) and {1} for the number of countries available (eg. 60 countries).</comment>
   </data>
-  <data name="Upsell_Carousel_WorldwideCoverage_Audit">
-    <value>Gecontroleerd door onafhankelijke beveiligingsexperts</value>
-  </data>
   <data name="Upsell_Carousel_WorldwideCoverage_Censorship">
-    <value>Omzeil censuur met geavanceerde beveiligings- en privacyfuncties</value>
+    <value>Bypass censorship with advanced security features</value>
   </data>
   <data name="Upsell_Carousel_WorldwideCoverage_Countries_One">
     <value>{0} land</value>
@@ -3844,8 +3946,11 @@ VPN-verbinding</value>
   <data name="Upsell_Carousel_WorldwideCoverage_Countries_Other">
     <value>{0} landen</value>
   </data>
-  <data name="Upsell_Carousel_WorldwideCoverage_OpenSource">
-    <value>Open-source VPN</value>
+  <data name="Upsell_Carousel_WorldwideCoverage_Features">
+    <value>Secure streaming, torrenting, and more</value>
+  </data>
+  <data name="Upsell_Carousel_WorldwideCoverage_Selection">
+    <value>Select any country from our worldwide network</value>
   </data>
   <data name="Upsell_Carousel_WorldwideCoverage_Servers_One">
     <value>{0} beveiligde server</value>
