--- a/src/Client/Localization/ProtonVPN.Client.Localization/Strings/pt-BR/Resources.resw
+++ b/src/Client/Localization/ProtonVPN.Client.Localization/Strings/pt-BR/Resources.resw
@@ -294,8 +294,13 @@
   <data name="Common_States_Updating">
     <value>Atualizando...</value>
   </data>
+  <data name="Common_Tags_Beta">
+    <value>BETA</value>
+    <comment>This tag indicates that this version of the app is currently in beta (early access)</comment>
+  </data>
   <data name="Common_Tags_New">
     <value>NOVO</value>
+    <comment>This tag indicates that a newer version of the app is currently available</comment>
   </data>
   <data name="Components_Update_GetMostFromYourVpn">
     <value>Atualize o aplicativo para a versão mais recente para aproveitar ao máximo sua VPN.</value>
@@ -1773,6 +1778,39 @@ Latências altas podem reduzir a velocidade da conexão.</value>
   <data name="Dialogs_Latency_Title">
     <value>O que é latência?</value>
   </data>
+  <data name="Dialogs_NpsSurvey_CommentLabel">
+    <value>Diga-nos por que você deu essa classificação</value>
+  </data>
+  <data name="Dialogs_NpsSurvey_ErrorSubtitle">
+    <value>Não foi possível enviar seu feedback. Verifique sua conexão e tente novamente.</value>
+  </data>
+  <data name="Dialogs_NpsSurvey_ErrorTitle">
+    <value>Algo deu errado.</value>
+  </data>
+  <data name="Dialogs_NpsSurvey_HighRateDescription">
+    <value>10 é muito provável</value>
+  </data>
+  <data name="Dialogs_NpsSurvey_LowRateDescription">
+    <value>0 é muito improvável</value>
+  </data>
+  <data name="Dialogs_NpsSurvey_Optional">
+    <value>Opcional</value>
+  </data>
+  <data name="Dialogs_NpsSurvey_ShareAnonymously">
+    <value>Compartilhar anonimamente</value>
+  </data>
+  <data name="Dialogs_NpsSurvey_SuccessSubtitle">
+    <value>Seu feedback nos ajuda a melhorar o Proton VPN.</value>
+  </data>
+  <data name="Dialogs_NpsSurvey_SuccessTitle">
+    <value>Nós lhe agradecemos por seus comentários.</value>
+  </data>
+  <data name="Dialogs_NpsSurvey_Title">
+    <value>Qual a probabilidade de você recomendar o Proton VPN a um amigo?</value>
+  </data>
+  <data name="Dialogs_NpsSurvey_TryAgain">
+    <value>Tente novamente</value>
+  </data>
   <data name="Dialogs_P2PDetection_Description">
     <value>Sua conexão foi desativada porque você está usando um servidor que não oferece suporte a tráfego peer-to-peer (P2P). P2P não é compatível com servidores gratuitos. Use um servidor diferente para P2P.</value>
   </data>
@@ -2039,11 +2077,23 @@ Uma carga alta de servidor pode tornar sua conexão mais lenta.</value>
   <data name="Dialogs_WhatsNew_Gateways_Title">
     <value>Os gateways mudaram de lugar</value>
   </data>
+  <data name="Dialogs_WhatsNew_LanConnections_Description">
+    <value>Agora você pode se conectar a impressoras, alto-falantes e outros dispositivos na sua rede local (LAN), ignorando o túnel VPN.</value>
+  </data>
+  <data name="Dialogs_WhatsNew_LanConnections_Title">
+    <value>Conexões LAN</value>
+  </data>
   <data name="Dialogs_WhatsNew_NewLook_Description">
     <value>Atualizamos nosso design e mudamos algumas coisas de lugar para facilitar o uso do aplicativo.</value>
   </data>
   <data name="Dialogs_WhatsNew_NewLook_Title">
     <value>Nova aparência, mesma proteção</value>
+  </data>
+  <data name="Dialogs_WhatsNew_PortNumber_Description">
+    <value>Quando o encaminhamento de porta está ativado, você verá o número da sua porta ativa na tela inicial.</value>
+  </data>
+  <data name="Dialogs_WhatsNew_PortNumber_Title">
+    <value>Número de porta ativo</value>
   </data>
   <data name="Dialogs_WhatsNew_Profiles_Description">
     <value>Adicione configurações avançadas de perfil, como NetShield e encaminhamento de porta, ou configure o Connect and Go para iniciar um site de sua escolha ao se conectar.</value>
@@ -2062,6 +2112,12 @@ Uma carga alta de servidor pode tornar sua conexão mais lenta.</value>
   </data>
   <data name="Dialogs_WhatsNew_Title">
     <value>Novidades</value>
+  </data>
+  <data name="Dialogs_WhatsNew_TrayApp_Description">
+    <value>Agora você pode conectar, desconectar e mudar sua conexão padrão pela bandeja do sistema.</value>
+  </data>
+  <data name="Dialogs_WhatsNew_TrayApp_Title">
+    <value>Novo aplicativo na bandeja do sistema</value>
   </data>
   <data name="Exit_Confirmation_Title">
     <value>Sair do Proton VPN?</value>
@@ -2134,6 +2190,9 @@ Uma carga alta de servidor pode tornar sua conexão mais lenta.</value>
   </data>
   <data name="Flyouts_KillSwitch_Info">
     <value>Seu endereço IP pode ser exposto se a sua conexão de VPN cair.</value>
+  </data>
+  <data name="Flyouts_KillSwitch_Info_Disconnected">
+    <value>O kill switch avançado desativa sua internet para proteger seu endereço IP enquanto você não está conectado ao Proton VPN.</value>
   </data>
   <data name="Flyouts_KillSwitch_Standard_Success">
     <value>Se a conexão da VPN cair, a conexão com a Internet será interrompida até que a VPN seja restaurada</value>
@@ -2217,20 +2276,20 @@ Uma carga alta de servidor pode tornar sua conexão mais lenta.</value>
     <value>Acelerado pelo VPN Accelerator</value>
   </data>
   <data name="Flyouts_Speed_Description1">
-    <value>Isso mostra a quantidade de dados transmitidos pelo Proton VPN a cada segundo.</value>
+    <value>Mostra quantos dados passam pelo túnel VPN em tempo real.</value>
   </data>
   <data name="Flyouts_Speed_Description2">
-    <value>A velocidade é baseada na atividade atual de seu equipamento — não representa a velocidade máxima da VPN.</value>
+    <value>Isso é baseado na atividade atual do seu dispositivo. Geralmente, isso não representa a velocidade máxima da VPN.</value>
   </data>
   <data name="Flyouts_Speed_Download">
     <value>Download</value>
     <comment>Refers to the download speed (e.g., Download [new line] 10 MB/s).</comment>
   </data>
   <data name="Flyouts_Speed_KnowledgeBaseLinkTitle">
-    <value>Entendendo e aumentando as velocidades da conexão VPN</value>
+    <value>Velocidade da VPN e tráfego explicados</value>
   </data>
   <data name="Flyouts_Speed_Title">
-    <value>Velocidade</value>
+    <value>Tráfego atual</value>
   </data>
   <data name="Flyouts_Speed_Upload">
     <value>Upload</value>
@@ -2276,14 +2335,14 @@ Uma carga alta de servidor pode tornar sua conexão mais lenta.</value>
     <value>Aproveite o melhor dos dois mundos</value>
   </data>
   <data name="Flyouts_Volume_Description">
-    <value>Isso mostra quanto tráfego foi roteado pela sua VPN.</value>
+    <value>Mostra a quantidade total de dados passados pelo túnel VPN desde que você conectou.</value>
   </data>
   <data name="Flyouts_Volume_Download">
     <value>Download</value>
     <comment>Refers to the downloaded volume (e.g., Download [new line] 250 MB).</comment>
   </data>
   <data name="Flyouts_Volume_Title">
-    <value>Volume</value>
+    <value>Tráfego total</value>
   </data>
   <data name="Flyouts_Volume_Upload">
     <value>Upload</value>
@@ -2322,7 +2381,7 @@ Uma carga alta de servidor pode tornar sua conexão mais lenta.</value>
     <comment>Format a size in Terabytes. {0} is a place holder for the number of Terabytes (eg. 30 TB)</comment>
   </data>
   <data name="Format_SpeedUnit">
-    <value>Velocidade ({0})</value>
+    <value>Tráfego atual ({0})</value>
     <comment>This string is used to format speed measurements in various units. The placeholder {0} will be replaced by the appropriate unit of measurement, such as B/s (Bytes per second), kB/s (Kilobytes per second), MB/s (Megabytes per second), and so on.</comment>
   </data>
   <data name="Format_Speed_BytesPerSecond">
@@ -2377,6 +2436,12 @@ Uma carga alta de servidor pode tornar sua conexão mais lenta.</value>
     <value>hh\:mm\:ss</value>
     <comment>Format a time as a number of hours, minutes and seconds in a short format. 'hh' is a placeholder for the number of hours, 'mm' is a placeholder for the number of minutes and 'ss' for the number of seconds. The separator (if any) needs to be escaped using '' character (eg. hh\:mm\:ss gives 01:05:36).</comment>
   </data>
+  <data name="Format_Time_Hours_Ago_One">
+    <value>{0} hora atrás</value>
+  </data>
+  <data name="Format_Time_Hours_Ago_Other">
+    <value>{0} horas atrás</value>
+  </data>
   <data name="Format_Time_Minutes">
     <value>{0} min</value>
     <comment>Format a time as a number of minutes. {0} is a placeholder for the number of minutes (eg. 1 min or 20 min). Use abbreviations, no pluralization.</comment>
@@ -2389,9 +2454,21 @@ Uma carga alta de servidor pode tornar sua conexão mais lenta.</value>
     <value>mm\:ss</value>
     <comment>Format a time as a number of minutes and seconds in a short format. 'mm' is a placeholder for the number of minutes and 'ss' for the number of seconds. The separator (if any) needs to be escaped using '' character (eg. mm\:ss gives 05:36).</comment>
   </data>
+  <data name="Format_Time_Minutes_Ago_One">
+    <value>{0} minuto atrás</value>
+  </data>
+  <data name="Format_Time_Minutes_Ago_Other">
+    <value>{0} minutos atrás</value>
+  </data>
   <data name="Format_Time_Seconds">
     <value>{0} s</value>
     <comment>Format a time as a number of seconds. {0} is a placeholder for the number of second (eg. 1 sec or 20 sec). Use abbreviations for seconds, no pluralization.</comment>
+  </data>
+  <data name="Format_Time_Seconds_Ago_One">
+    <value>{0} segundo atrás</value>
+  </data>
+  <data name="Format_Time_Seconds_Ago_Other">
+    <value>{0} segundos atrás</value>
   </data>
   <data name="FreeConnections_P2PUpsell">
     <value>Baixe arquivos via BitTorrent e outros protocolos de compartilhamento de arquivos</value>
@@ -2458,8 +2535,14 @@ Uma carga alta de servidor pode tornar sua conexão mais lenta.</value>
     <value>Cartão de conexão</value>
     <comment>Landmarks are not displayed on screen but read by a screen reader to identify a group of components for accessibility purposes.</comment>
   </data>
+  <data name="Home_ConnectionDetails_AdvancedKillSwitchActivated">
+    <value>O Kill switch avançado foi ativado.</value>
+  </data>
   <data name="Home_ConnectionDetails_City">
     <value>Cidade</value>
+  </data>
+  <data name="Home_ConnectionDetails_ConnectToRestoreConnection">
+    <value>Conecte-se à VPN para restaurar sua conexão com a internet.</value>
   </data>
   <data name="Home_ConnectionDetails_ConnectedFor">
     <value>Conectado para</value>
@@ -2532,7 +2615,7 @@ Uma carga alta de servidor pode tornar sua conexão mais lenta.</value>
     <value>Criptografe sua atividade on-line conectando-se à VPN.</value>
   </data>
   <data name="Home_ConnectionDetails_Volume">
-    <value>Volume</value>
+    <value>Tráfego total</value>
   </data>
   <data name="Home_ConnectionDetails_Volume_Download">
     <value>Volume de download</value>
@@ -2743,6 +2826,10 @@ Uma carga alta de servidor pode tornar sua conexão mais lenta.</value>
   </data>
   <data name="Notifications_UnsecureWifi_Title">
     <value>Rede Wi-Fi insegura detectada</value>
+  </data>
+  <data name="NpsSurvey_Title">
+    <value>Pesquisa do Proton VPN</value>
+    <comment>The window title displayed at the top of the NPS (Net Promoter Score) survey</comment>
   </data>
   <data name="Overlay_OutdatedClient_Action">
     <value>Atualizar agora</value>
@@ -3096,10 +3183,10 @@ Uma carga alta de servidor pode tornar sua conexão mais lenta.</value>
     <value>Previne vazamentos de IPv6 bloqueando conexões com endereços IPv6.</value>
   </data>
   <data name="Settings_Connection_Advanced_LanConnections">
-    <value>Conexões LAN</value>
+    <value>Permitir conexões LAN</value>
   </data>
   <data name="Settings_Connection_Advanced_LanConnections_Description">
-    <value>Permite que você se conecte a impressoras, alto-falantes e outros dispositivos na rede local do seu dispositivo.</value>
+    <value>Permite conectar-se a impressoras, alto-falantes e outros dispositivos na sua rede local.</value>
   </data>
   <data name="Settings_Connection_Advanced_NatType">
     <value>Tipo NAT</value>
@@ -3236,6 +3323,10 @@ Uma carga alta de servidor pode tornar sua conexão mais lenta.</value>
   <data name="Settings_Connection_PortForwarding_Footer">
     <value>Para usar o encaminhamento de porta, conecte-se a um servidor que suporte P2P.</value>
   </data>
+  <data name="Settings_Connection_PortForwarding_LastChanged">
+    <value>Última alteração: {0}</value>
+    <comment>Indicates when the active port was changed for the last time. {0} is a placeholder for the time. (eg. "Last changed: 5 minutes ago" or "Last changed: May 20, at 14:32")</comment>
+  </data>
   <data name="Settings_Connection_PortForwarding_Loading">
     <value>Carregando...</value>
   </data>
@@ -3288,10 +3379,14 @@ Uma carga alta de servidor pode tornar sua conexão mais lenta.</value>
     <value>Personalize sua conexão decidindo quais aplicativos e endereços IP são protegidos por VPN.</value>
   </data>
   <data name="Settings_Connection_SplitTunneling_Inverse">
-    <value>Inverso</value>
+    <value>Modo de inclusão</value>
   </data>
   <data name="Settings_Connection_SplitTunneling_Inverse_Description">
     <value>Apenas aplicativos e endereços IP selecionados se conectam via VPN, o restante do tráfego fica desprotegido</value>
+  </data>
+  <data name="Settings_Connection_SplitTunneling_Inverse_Short">
+    <value>Incluir</value>
+    <comment>Shorter version (if possible) of "Include mode". To be used when available space is limited.</comment>
   </data>
   <data name="Settings_Connection_SplitTunneling_IpAddresses_Add">
     <value>Adicionar IP</value>
@@ -3307,10 +3402,14 @@ Uma carga alta de servidor pode tornar sua conexão mais lenta.</value>
     <value>Adicionar endereço IPv4</value>
   </data>
   <data name="Settings_Connection_SplitTunneling_Standard">
-    <value>Padrão</value>
+    <value>Modo de exclusão</value>
   </data>
   <data name="Settings_Connection_SplitTunneling_Standard_Description">
     <value>Aplicativos e endereços IP selecionados são excluídos da conexão VPN</value>
+  </data>
+  <data name="Settings_Connection_SplitTunneling_Standard_Short">
+    <value>Excluir</value>
+    <comment>Shorter version (if possible) of "Exclude mode". To be used when available space is limited.</comment>
   </data>
   <data name="Settings_Connection_VpnAccelerator">
     <value>VPN Accelerator</value>
@@ -3640,6 +3739,9 @@ Uma carga alta de servidor pode tornar sua conexão mais lenta.</value>
     <value>Abrir {0}</value>
     <comment>Button displayed in the tray icon to open the Proton VPN application. {0} is a placeholder for the name of the application (eg. "Open Proton VPN")</comment>
   </data>
+  <data name="Tray_Actions_OpenApplicationToSignIn">
+    <value>Abrir o aplicativo para iniciar sessão</value>
+  </data>
   <data name="Unit_BytesPerSecond">
     <value>B/s</value>
     <comment>Unit for Bytes per second</comment>
@@ -3769,13 +3871,16 @@ Uma carga alta de servidor pode tornar sua conexão mais lenta.</value>
     <value>Roteie por servidores ultrasseguros na Suíça, Suécia e Islândia</value>
   </data>
   <data name="Upsell_Carousel_Speed">
-    <value>Navegue em velocidades ainda maiores (até 10 Gbps)</value>
+    <value>Navegue em velocidades ainda mais altas</value>
   </data>
   <data name="Upsell_Carousel_Speed_Acceleration">
-    <value>Aumente sua velocidade de conexão em até 400% com VPN Accelerator</value>
+    <value>Navegue até 400% mais rápido com o VPN Accelerator</value>
   </data>
   <data name="Upsell_Carousel_Speed_Access">
     <value>Acesse servidores mais rápidos e menos sobrecarregados</value>
+  </data>
+  <data name="Upsell_Carousel_Speed_Traffic">
+    <value>Obtenha velocidades de conexão de até 10 Gbps</value>
   </data>
   <data name="Upsell_Carousel_SplitTunneling">
     <value>Aproveite o melhor dos dois mundos</value>
@@ -3832,11 +3937,8 @@ Uma carga alta de servidor pode tornar sua conexão mais lenta.</value>
     <value>Acesse mais de {0} em {1}</value>
     <comment>Title for the worldwide coverage upsell feature page. {0} is a placeholder for the number of servers (eg. 100 secure servers) and {1} for the number of countries available (eg. 60 countries).</comment>
   </data>
-  <data name="Upsell_Carousel_WorldwideCoverage_Audit">
-    <value>Auditoria por especialistas de segurança independentes</value>
-  </data>
   <data name="Upsell_Carousel_WorldwideCoverage_Censorship">
-    <value>Evite a censura com recursos avançados de segurança e privacidade</value>
+    <value>Ignore a censura com recursos avançados de segurança</value>
   </data>
   <data name="Upsell_Carousel_WorldwideCoverage_Countries_One">
     <value>{0} país</value>
@@ -3844,8 +3946,11 @@ Uma carga alta de servidor pode tornar sua conexão mais lenta.</value>
   <data name="Upsell_Carousel_WorldwideCoverage_Countries_Other">
     <value>{0} países</value>
   </data>
-  <data name="Upsell_Carousel_WorldwideCoverage_OpenSource">
-    <value>Uma VPN de código aberto</value>
+  <data name="Upsell_Carousel_WorldwideCoverage_Features">
+    <value>Streaming, torrent e muito mais seguros</value>
+  </data>
+  <data name="Upsell_Carousel_WorldwideCoverage_Selection">
+    <value>Selecione qualquer país da nossa rede mundial</value>
   </data>
   <data name="Upsell_Carousel_WorldwideCoverage_Servers_One">
     <value>{0} servidor seguro</value>
