--- a/src/Client/Localization/ProtonVPN.Client.Localization/Strings/ro-RO/Resources.resw
+++ b/src/Client/Localization/ProtonVPN.Client.Localization/Strings/ro-RO/Resources.resw
@@ -294,8 +294,13 @@
   <data name="Common_States_Updating">
     <value>Se actualizează...</value>
   </data>
+  <data name="Common_Tags_Beta">
+    <value>BETA</value>
+    <comment>This tag indicates that this version of the app is currently in beta (early access)</comment>
+  </data>
   <data name="Common_Tags_New">
     <value>NOU</value>
+    <comment>This tag indicates that a newer version of the app is currently available</comment>
   </data>
   <data name="Components_Update_GetMostFromYourVpn">
     <value>Obțineți tot ce poate oferi aplicația VPN actualizând-o la ultima versiune.</value>
@@ -1845,6 +1850,39 @@ Latența mare vă poate încetini conexiunea.</value>
   <data name="Dialogs_Latency_Title">
     <value>Ce este latența?</value>
   </data>
+  <data name="Dialogs_NpsSurvey_CommentLabel">
+    <value>Vă rugăm să ne spuneți de ce ați acordat această evaluare</value>
+  </data>
+  <data name="Dialogs_NpsSurvey_ErrorSubtitle">
+    <value>Nu s-a putut trimite mesajul. Verificați-vă conexiunea și reîncercați.</value>
+  </data>
+  <data name="Dialogs_NpsSurvey_ErrorTitle">
+    <value>Ceva nu a funcționat corect</value>
+  </data>
+  <data name="Dialogs_NpsSurvey_HighRateDescription">
+    <value>10 este foarte probabil</value>
+  </data>
+  <data name="Dialogs_NpsSurvey_LowRateDescription">
+    <value>0 este foarte improbabil</value>
+  </data>
+  <data name="Dialogs_NpsSurvey_Optional">
+    <value>Opțional</value>
+  </data>
+  <data name="Dialogs_NpsSurvey_ShareAnonymously">
+    <value>Partajare anonimă</value>
+  </data>
+  <data name="Dialogs_NpsSurvey_SuccessSubtitle">
+    <value>Părerile dvs. ne ajută să îmbunătățim Proton VPN.</value>
+  </data>
+  <data name="Dialogs_NpsSurvey_SuccessTitle">
+    <value>Vă mulțumim pentru răspunsuri.</value>
+  </data>
+  <data name="Dialogs_NpsSurvey_Title">
+    <value>Cât de probabil este să recomandați Proton VPN unui prieten?</value>
+  </data>
+  <data name="Dialogs_NpsSurvey_TryAgain">
+    <value>Reîncercare</value>
+  </data>
   <data name="Dialogs_P2PDetection_Description">
     <value>Conexiunea a fost dezactivată deoarece folosiți un server care nu suportă traficul de la persoană-la-persoană (P2P). P2P nu este suportat pe serverele gratuite. Folosiți un server P2P diferit.</value>
   </data>
@@ -2114,11 +2152,23 @@ O sarcină mare a serverului vă poate încetini conexiunea.</value>
   <data name="Dialogs_WhatsNew_Gateways_Title">
     <value>Porțile de acces s-au mutat</value>
   </data>
+  <data name="Dialogs_WhatsNew_LanConnections_Description">
+    <value>Acum vă puteți conecta la imprimante, difuzoare și alte dispozitive din rețeaua locală (LAN), ocolind tunelul VPN.</value>
+  </data>
+  <data name="Dialogs_WhatsNew_LanConnections_Title">
+    <value>Conexiuni LAN</value>
+  </data>
   <data name="Dialogs_WhatsNew_NewLook_Description">
     <value>Am împrospătat interfața și am mutat unele articole pentru a face aplicația mai ușor de utilizat.</value>
   </data>
   <data name="Dialogs_WhatsNew_NewLook_Title">
     <value>Un aspect nou, aceeași protecție</value>
+  </data>
+  <data name="Dialogs_WhatsNew_PortNumber_Description">
+    <value>Când redirecționarea portului este activată, veți vedea acum numărul portului activ pe ecranul principal.</value>
+  </data>
+  <data name="Dialogs_WhatsNew_PortNumber_Title">
+    <value>Număr port activ</value>
   </data>
   <data name="Dialogs_WhatsNew_Profiles_Description">
     <value>Adăugați setări avansate de profil, cum ar fi NetShield și redirecționarea porturilor sau configurați „Conectare și accesare” pentru a lansa un site web la alegere când vă conectați.</value>
@@ -2137,6 +2187,12 @@ O sarcină mare a serverului vă poate încetini conexiunea.</value>
   </data>
   <data name="Dialogs_WhatsNew_Title">
     <value>Noutăți</value>
+  </data>
+  <data name="Dialogs_WhatsNew_TrayApp_Description">
+    <value>Puteți acum să vă conectați, să vă deconectați și să schimbați conexiunea implicită din zona de notificare.</value>
+  </data>
+  <data name="Dialogs_WhatsNew_TrayApp_Title">
+    <value>Aplicație nouă în zona de notificare</value>
   </data>
   <data name="Exit_Confirmation_Title">
     <value>Închideți Proton VPN?</value>
@@ -2209,6 +2265,9 @@ O sarcină mare a serverului vă poate încetini conexiunea.</value>
   </data>
   <data name="Flyouts_KillSwitch_Info">
     <value>Adresa IP v-ar putea fi expusă dacă se întrerupe conexiunea la VPN.</value>
+  </data>
+  <data name="Flyouts_KillSwitch_Info_Disconnected">
+    <value>Funcția de blocare a conexiunii avansată vă dezactivează accesul la internet pentru a vă proteja adresa IP cât timp nu aveți conexiune la Proton VPN.</value>
   </data>
   <data name="Flyouts_KillSwitch_Standard_Success">
     <value>Dacă se întrerupe conexiunea la VPN, se va întrerupe și conexiunea la internet până la reconectarea în VPN.</value>
@@ -2292,20 +2351,20 @@ O sarcină mare a serverului vă poate încetini conexiunea.</value>
     <value>Accelerată de VPN Accelerator</value>
   </data>
   <data name="Flyouts_Speed_Description1">
-    <value>Aceasta arată câte date sunt transmise prin Proton VPN în fiecare secundă.</value>
+    <value>Afișează cât trafic trece prin tunelul VPN în timp real.</value>
   </data>
   <data name="Flyouts_Speed_Description2">
-    <value>Viteza este bazată pe activitatea curentă a dispozitivului — nu reprezintă viteza maximă a VPN-ului.</value>
+    <value>Aceasta se bazează pe activitatea curentă a dispozitivului. În cele mai multe cazuri, nu reprezintă viteza maximă prin VPN.</value>
   </data>
   <data name="Flyouts_Speed_Download">
     <value>Descărcare</value>
     <comment>Refers to the download speed (e.g., Download [new line] 10 MB/s).</comment>
   </data>
   <data name="Flyouts_Speed_KnowledgeBaseLinkTitle">
-    <value>Înțelegerea și creșterea vitezei de conectare prin VPN</value>
+    <value>Viteza și traficul VPN explicate</value>
   </data>
   <data name="Flyouts_Speed_Title">
-    <value>Viteza</value>
+    <value>Trafic actual</value>
   </data>
   <data name="Flyouts_Speed_Upload">
     <value>Încărcare</value>
@@ -2363,14 +2422,14 @@ O sarcină mare a serverului vă poate încetini conexiunea.</value>
     <value>Obțineți maximum din ambele părți</value>
   </data>
   <data name="Flyouts_Volume_Description">
-    <value>Aceasta artă cât trafic este direcționat prin VPN.</value>
+    <value>Afișează cantitatea totală de date transmise prin tunelul VPN de la ultima conectare.</value>
   </data>
   <data name="Flyouts_Volume_Download">
     <value>Descărcare</value>
     <comment>Refers to the downloaded volume (e.g., Download [new line] 250 MB).</comment>
   </data>
   <data name="Flyouts_Volume_Title">
-    <value>Volum</value>
+    <value>Trafic total</value>
   </data>
   <data name="Flyouts_Volume_Upload">
     <value>Încărcare</value>
@@ -2409,7 +2468,7 @@ O sarcină mare a serverului vă poate încetini conexiunea.</value>
     <comment>Format a size in Terabytes. {0} is a place holder for the number of Terabytes (eg. 30 TB)</comment>
   </data>
   <data name="Format_SpeedUnit">
-    <value>Viteza ({0})</value>
+    <value>Trafic actual ({0})</value>
     <comment>This string is used to format speed measurements in various units. The placeholder {0} will be replaced by the appropriate unit of measurement, such as B/s (Bytes per second), kB/s (Kilobytes per second), MB/s (Megabytes per second), and so on.</comment>
   </data>
   <data name="Format_Speed_BytesPerSecond">
@@ -2470,6 +2529,15 @@ O sarcină mare a serverului vă poate încetini conexiunea.</value>
     <value>hh\:mm\:ss</value>
     <comment>Format a time as a number of hours, minutes and seconds in a short format. 'hh' is a placeholder for the number of hours, 'mm' is a placeholder for the number of minutes and 'ss' for the number of seconds. The separator (if any) needs to be escaped using '' character (eg. hh\:mm\:ss gives 01:05:36).</comment>
   </data>
+  <data name="Format_Time_Hours_Ago_One">
+    <value>acum {0} oră</value>
+  </data>
+  <data name="Format_Time_Hours_Ago_Few">
+    <value>acum {0} ore</value>
+  </data>
+  <data name="Format_Time_Hours_Ago_Other">
+    <value>acum {0} de ore</value>
+  </data>
   <data name="Format_Time_Minutes">
     <value>{0} min</value>
     <comment>Format a time as a number of minutes. {0} is a placeholder for the number of minutes (eg. 1 min or 20 min). Use abbreviations, no pluralization.</comment>
@@ -2482,9 +2550,27 @@ O sarcină mare a serverului vă poate încetini conexiunea.</value>
     <value>mm\:ss</value>
     <comment>Format a time as a number of minutes and seconds in a short format. 'mm' is a placeholder for the number of minutes and 'ss' for the number of seconds. The separator (if any) needs to be escaped using '' character (eg. mm\:ss gives 05:36).</comment>
   </data>
+  <data name="Format_Time_Minutes_Ago_One">
+    <value>acum {0} minut</value>
+  </data>
+  <data name="Format_Time_Minutes_Ago_Few">
+    <value>acum {0} minute</value>
+  </data>
+  <data name="Format_Time_Minutes_Ago_Other">
+    <value>acum {0} de minute</value>
+  </data>
   <data name="Format_Time_Seconds">
     <value>{0} sec</value>
     <comment>Format a time as a number of seconds. {0} is a placeholder for the number of second (eg. 1 sec or 20 sec). Use abbreviations for seconds, no pluralization.</comment>
+  </data>
+  <data name="Format_Time_Seconds_Ago_One">
+    <value>acum {0} secundă</value>
+  </data>
+  <data name="Format_Time_Seconds_Ago_Few">
+    <value>acum {0} secunde</value>
+  </data>
+  <data name="Format_Time_Seconds_Ago_Other">
+    <value>acum {0} de secunde</value>
   </data>
   <data name="FreeConnections_P2PUpsell">
     <value>Descărcați fișiere prin BitTorrent și alte protocoale de partajare fișiere</value>
@@ -2551,8 +2637,14 @@ O sarcină mare a serverului vă poate încetini conexiunea.</value>
     <value>Card conexiune</value>
     <comment>Landmarks are not displayed on screen but read by a screen reader to identify a group of components for accessibility purposes.</comment>
   </data>
+  <data name="Home_ConnectionDetails_AdvancedKillSwitchActivated">
+    <value>Blocare conexiune avansată activată</value>
+  </data>
   <data name="Home_ConnectionDetails_City">
     <value>Oraș</value>
+  </data>
+  <data name="Home_ConnectionDetails_ConnectToRestoreConnection">
+    <value>Conectați-vă la VPN pentru a vă restaura conexiunea la internet.</value>
   </data>
   <data name="Home_ConnectionDetails_ConnectedFor">
     <value>Conectat timp de</value>
@@ -2625,7 +2717,7 @@ O sarcină mare a serverului vă poate încetini conexiunea.</value>
     <value>Criptați-vă activitatea online conectându-vă prin VPN.</value>
   </data>
   <data name="Home_ConnectionDetails_Volume">
-    <value>Volum</value>
+    <value>Trafic total</value>
   </data>
   <data name="Home_ConnectionDetails_Volume_Download">
     <value>Volumul descărcare</value>
@@ -2842,6 +2934,10 @@ O sarcină mare a serverului vă poate încetini conexiunea.</value>
   </data>
   <data name="Notifications_UnsecureWifi_Title">
     <value>S-a detectat o conexiune Wi-Fi nesigură</value>
+  </data>
+  <data name="NpsSurvey_Title">
+    <value>Proton VPN - Sondaj</value>
+    <comment>The window title displayed at the top of the NPS (Net Promoter Score) survey</comment>
   </data>
   <data name="Overlay_OutdatedClient_Action">
     <value>Actualizare acum</value>
@@ -3195,10 +3291,10 @@ O solicitare mare a serverului vă poate încetini conexiunea.</value>
     <value>Previne divulgările prin IPv6 blocând conexiunile către adrese IPv6.</value>
   </data>
   <data name="Settings_Connection_Advanced_LanConnections">
-    <value>Conexiuni LAN</value>
+    <value>Permitere conexiuni LAN</value>
   </data>
   <data name="Settings_Connection_Advanced_LanConnections_Description">
-    <value>Vă permite să vă conectați la imprimante, boxe și alte dispozitive din rețeaua locală a dispozitivului.</value>
+    <value>Permite conexiuni către imprimante, boxe și alte dispozitive din rețeaua locală.</value>
   </data>
   <data name="Settings_Connection_Advanced_NatType">
     <value>Tip NAT</value>
@@ -3335,6 +3431,10 @@ O solicitare mare a serverului vă poate încetini conexiunea.</value>
   <data name="Settings_Connection_PortForwarding_Footer">
     <value>Pentru a utiliza redirecționarea portului, conectați-vă la un server care acceptă P2P.</value>
   </data>
+  <data name="Settings_Connection_PortForwarding_LastChanged">
+    <value>Ultima modificare: {0}</value>
+    <comment>Indicates when the active port was changed for the last time. {0} is a placeholder for the time. (eg. "Last changed: 5 minutes ago" or "Last changed: May 20, at 14:32")</comment>
+  </data>
   <data name="Settings_Connection_PortForwarding_Loading">
     <value>Se încarcă…</value>
   </data>
@@ -3387,10 +3487,14 @@ O solicitare mare a serverului vă poate încetini conexiunea.</value>
     <value>Personalizați-vă conexiunea decizând ce aplicații și adrese IP sunt protejate de către VPN.</value>
   </data>
   <data name="Settings_Connection_SplitTunneling_Inverse">
-    <value>Inversare</value>
+    <value>Mod includere</value>
   </data>
   <data name="Settings_Connection_SplitTunneling_Inverse_Description">
     <value>Doar aplicațiile selectate și adresele IP se conectează prin VPN, orice alt trafic nu este protejat.</value>
+  </data>
+  <data name="Settings_Connection_SplitTunneling_Inverse_Short">
+    <value>Includere</value>
+    <comment>Shorter version (if possible) of "Include mode". To be used when available space is limited.</comment>
   </data>
   <data name="Settings_Connection_SplitTunneling_IpAddresses_Add">
     <value>Adăugare IP</value>
@@ -3406,10 +3510,14 @@ O solicitare mare a serverului vă poate încetini conexiunea.</value>
     <value>Adăugare adresă IPv4</value>
   </data>
   <data name="Settings_Connection_SplitTunneling_Standard">
-    <value>Standard</value>
+    <value>Mod excludere</value>
   </data>
   <data name="Settings_Connection_SplitTunneling_Standard_Description">
     <value>Aplicațiile selectate și adresele IP sunt excluse din conexiunea VPN</value>
+  </data>
+  <data name="Settings_Connection_SplitTunneling_Standard_Short">
+    <value>Excludere</value>
+    <comment>Shorter version (if possible) of "Exclude mode". To be used when available space is limited.</comment>
   </data>
   <data name="Settings_Connection_VpnAccelerator">
     <value>VPN Accelerator</value>
@@ -3739,6 +3847,9 @@ O solicitare mare a serverului vă poate încetini conexiunea.</value>
     <value>Deschidere {0}</value>
     <comment>Button displayed in the tray icon to open the Proton VPN application. {0} is a placeholder for the name of the application (eg. "Open Proton VPN")</comment>
   </data>
+  <data name="Tray_Actions_OpenApplicationToSignIn">
+    <value>Deschideți aplicația pentru conectare</value>
+  </data>
   <data name="Unit_BytesPerSecond">
     <value>B/s</value>
     <comment>Unit for Bytes per second</comment>
@@ -3868,13 +3979,16 @@ O solicitare mare a serverului vă poate încetini conexiunea.</value>
     <value>Direcționați traficul prin serverele ultrasigure din Elveția, Suedia si Islanda</value>
   </data>
   <data name="Upsell_Carousel_Speed">
-    <value>Navigați pe web la viteze și mai mari (până la 10 Gbps)</value>
+    <value>Navigați cu viteze și mai mari</value>
   </data>
   <data name="Upsell_Carousel_Speed_Acceleration">
-    <value>Creșteți-vă viteza conexiunii cu până la 400% cu VPN Accelerator</value>
+    <value>Navigați cu până la 400% mai rapid cu VPN Accelerator</value>
   </data>
   <data name="Upsell_Carousel_Speed_Access">
     <value>Accesați servere mai rapide, mai puțin aglomerate</value>
+  </data>
+  <data name="Upsell_Carousel_Speed_Traffic">
+    <value>Obțineți viteze de conexiune de până la 10 Gbps</value>
   </data>
   <data name="Upsell_Carousel_SplitTunneling">
     <value>Obțineți maximum din ambele părți</value>
@@ -3931,11 +4045,8 @@ O solicitare mare a serverului vă poate încetini conexiunea.</value>
     <value>Accesați peste {0} în {1}</value>
     <comment>Title for the worldwide coverage upsell feature page. {0} is a placeholder for the number of servers (eg. 100 secure servers) and {1} for the number of countries available (eg. 60 countries).</comment>
   </data>
-  <data name="Upsell_Carousel_WorldwideCoverage_Audit">
-    <value>Auditat de experți independenți în securitate</value>
-  </data>
   <data name="Upsell_Carousel_WorldwideCoverage_Censorship">
-    <value>Depășiți cenzura cu securitate avansată și funcții de confidențialitate</value>
+    <value>Depășiți cenzura cu funcțiile de securitate avansată</value>
   </data>
   <data name="Upsell_Carousel_WorldwideCoverage_Countries_One">
     <value>{0} țară</value>
@@ -3946,8 +4057,11 @@ O solicitare mare a serverului vă poate încetini conexiunea.</value>
   <data name="Upsell_Carousel_WorldwideCoverage_Countries_Other">
     <value>{0} de țări</value>
   </data>
-  <data name="Upsell_Carousel_WorldwideCoverage_OpenSource">
-    <value>VPN cu sursa publică</value>
+  <data name="Upsell_Carousel_WorldwideCoverage_Features">
+    <value>Transmisie în flux securizată, descărcare prin torrent și multe altele</value>
+  </data>
+  <data name="Upsell_Carousel_WorldwideCoverage_Selection">
+    <value>Selectați orice țară din rețeaua noastră mondială</value>
   </data>
   <data name="Upsell_Carousel_WorldwideCoverage_Servers_One">
     <value>{0} server securizat</value>
